--- a/_posts/2024-01-10-파드 네트워크 이해하기.md
+++ b/_posts/2024-01-10-파드 네트워크 이해하기.md
@@ -179,7 +179,7 @@ pod "test" deleted
 같은 노드 내의 파드는 브릿지 형태로 연결되어있다. 아래의 그림과 같이 각 파드에는 veth0이 하나씩 붙어있으며 해당 이더넷은 cni0을 통해 브릿지 형태로 연결되어있다. (Calico는 브릿지 형태가 아닌 터미널 형태로 통신을 지원한다.)
 
 
-![1_KVGeracu3qupNkoDERUR0A.webp](https://prod-files-secure.s3.us-west-2.amazonaws.com/3b953ad7-a4bc-4b8b-877c-db94279d5db4/405fb34e-791e-4312-a27e-29a5654554c0/1_KVGeracu3qupNkoDERUR0A.webp?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45HZZMZUHI%2F20240110%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20240110T133352Z&X-Amz-Expires=3600&X-Amz-Signature=ac417407d0eb84b5e31977b345ff42c1ecb4caa244c08234c2460ea30d456114&X-Amz-SignedHeaders=host&x-id=GetObject)
+![aws](/assets/img/post/파드%20네트워크%20이해하기/1.webp)
 
 
 [출처: [https://medium.com/finda-tech/kubernetes-네트워크-정리-fccd4fd0ae6](https://medium.com/finda-tech/kubernetes-%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC-%EC%A0%95%EB%A6%AC-fccd4fd0ae6)]
@@ -367,8 +367,8 @@ pod "pod2" deleted
 파드는 Private IP로 노드의 IP 네트워크와 다르다. 즉, 다른 노드에 존재한 파드와 통신하려면 노드의 대역폭을 한번 거쳐가야 한다. 그렇기에 같은 노드 상의 파드와 통신하는 건 문제가 없어도, 다른 노드 상의 파드와 통신하는 건 문제가 된다. 이를 위해 터널링 기술을 사용한다. 다른 노드에 위치한 파드에게 트래픽을 전송할 때는 터널링을 통해 기존의 src/dst를 숨기고 터널링을 위한 노드의 IP를 src/dst로 트래픽을 감싼다. 파드는 고유한 IP를 가진다. 즉, CNI를 통해 목적지 네트워크를 파드가 아닌, 파드가 위치한 호스트로 설정해야 한다. 이를 위해 하나의 층을 쌓아 캡슐화를 진행한다.
 
 
-![1_JqSLd3cPv14BWDtE7YEcRA.webp](https://prod-files-secure.s3.us-west-2.amazonaws.com/3b953ad7-a4bc-4b8b-877c-db94279d5db4/2af9332a-a67e-412e-b3eb-88e7554969ea/1_JqSLd3cPv14BWDtE7YEcRA.webp?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45HZZMZUHI%2F20240110%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20240110T133352Z&X-Amz-Expires=3600&X-Amz-Signature=d415e7a4f6110016b7a81a21303a973b564e8d03deafa11942238a0ce5155edf&X-Amz-SignedHeaders=host&x-id=GetObject)
-
+![1_JqSLd3cPv14BWDtE7YEcRA.webp](/assets/img/post/파드%20네트워크%20이해하기/2.webp)
+[출처: https://www.sobyte.net/post/2023-02/k8s-openshift/]
 
 이제 실습을 통해, 위의 내용을 확인한다.
 
@@ -513,7 +513,7 @@ otv             8472/udp                # Overlay Transport Virtualization (OTV)
 AWS 보안그룹에서, 아래와 사진과 같이 포트를 개방한다.
 
 
-![Untitled.png](/assets/img/post/파드%20네트워크%20이해하기/1.png)
+![Untitled.png](/assets/img/post/파드%20네트워크%20이해하기/3.png)
 
 
 설정을 완료한 후, 다시 Ping 테스트를 진행합니다. 정상적으로 작동하는 것을 확인할 수 있다.
@@ -573,3 +573,4 @@ IP 10.42.1.39 > 10.42.0.37: ICMP echo reply, id 4, seq 4, length 64
 
 [https://docs.k3s.io/architecture](https://docs.k3s.io/architecture)
 
+[https://www.sobyte.net/post/2023-02/k8s-openshift/](https://www.sobyte.net/post/2023-02/k8s-openshift/)
