--- a/_posts/2024-01-10-파드 네트워크 이해하기.md
+++ b/_posts/2024-01-10-파드 네트워크 이해하기.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 파드 네트워크 이해하기
+title: 쿠버네티스 파드 네트워크 이해하기
 date: 2024-01-10 21:10 +0900 
-description: 파드 네트워크 이해하기
+description: 쿠버네티스 파드 네트워크 이해하기
 category: [Kubernetes, Network] 
 tags: [Kubernetes, Network, CNI, Flannel] 
 pin: false
