--- a/_posts/2023-12-04-ELB.md
+++ b/_posts/2023-12-04-ELB.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: ELB 정리
+title: Spring Boot, ELB 연동하기
 date: 2023-12-04 21:00 +0900
-description: AWS ELB 정리
+description: Spring Boot, ELB 연동하기
 category: [AWS, ELB] 
 tags: [AWS, ELB, Spring Boot, HTTPS] # 문제유형
 pin: false
