update: 썸네일 추가

--- a/_posts/2024-01-10-파드 네트워크 이해하기.md
+++ b/_posts/2024-01-10-파드 네트워크 이해하기.md
@@ -5,6 +5,9 @@ date: 2024-01-10 21:10 +0900
 description: 쿠버네티스 파드 네트워크 이해하기
 category: [Kubernetes, Network] 
 tags: [Kubernetes, Network, CNI, Flannel] 
+image:
+  path: /assets/img/logo/Kubernetes/logo.png
+  alt: Kubernetes Logo
 pin: false
 math: true
 mermaid: true
