--- a/_posts/2024-01-28-CKA 취득 후기.md
+++ b/_posts/2024-01-28-CKA 취득 후기.md
@@ -5,6 +5,9 @@ date: 2024-01-28 10:00 +0900
 description: CKA 취득 후기
 category: [자격증, CKA] 
 tags: [CKA, Kubernetes, PSI] 
+image:
+  path: /assets/img/post/CKA%20취득%20후기/1.png
+  alt: CKA
 pin: false
 math: true
 mermaid: true
