Update Post: 2024-03-06-Lambda 정리

--- a/_posts/2024-03-06-Lambda 정리.md
+++ b/_posts/2024-03-06-Lambda 정리.md
@@ -130,48 +130,5 @@ AWS SAM 프로젝트는 [GitHub](https://github.com/aws/serverless-application-m
 아래는 블로그와 노션을 연동하는 용도로 제작한 Lambda + API Gateway에 대한 설정이다.
 
 
-```yaml
-AWSTemplateFormatVersion: 2010-09-09
-Description: >-
-  notion-sam
-Transform:
-  - AWS::Serverless-2016-10-31
-Resources:
-  blog:
-    Type: AWS::Serverless::Function
-    Properties:
-      Handler: src/handlers/blog.Handler
-      Runtime: nodejs18.x
-      Architectures:
-        - x86_64
-      MemorySize: 256
-      Timeout: 300
-      Description: Notion to GitHub
-      Environment:
-        Variables:
-          NOTION_SECRET_API_KEY: "{{resolve:secretsmanager:Blog:SecretString:NOTION_SECRET_API_KEY}}"
-          GITHUB_TOKEN: "{{resolve:secretsmanager:Blog:SecretString:GITHUB_TOKEN}}"
-
-      Policies:
-        - Version: "2012-10-17"
-          Statement:
-            - Effect: "Allow"
-              Action: "secretsmanager:GetSecretValue"
-              Resource:
-                - !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:Blog"
-                - !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:googleAPI"
-      Events:
-        Api:
-          Type: Api
-          Properties:
-            Path: /{pageid}/{title}
-            Method: get
-
-# 출력
-Outputs:
-  WebEndpoint:
-    Description: API Gateway endpoint URL for Prod stage
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/"
-
-```
+![Untitled.png](/assets/img/post/Lambda%20정리/2.png)
 
