update: image delete

--- a/_posts/2024-01-10-파드 네트워크 이해하기.md
+++ b/_posts/2024-01-10-파드 네트워크 이해하기.md
@@ -6,7 +6,7 @@ description: 쿠버네티스 파드 네트워크 이해하기
 category: [Kubernetes, Network] 
 tags: [Kubernetes, Network, CNI, Flannel] 
 image:
-  path: assets/img/logo/Kubernetes/logo2.png
+  path: assets/img/logo/Kubernetes/logo3.png
   alt: Kubernetes Logo
 pin: false
 math: true
@@ -370,7 +370,7 @@ pod "pod2" deleted
 파드는 Private IP로 노드의 IP 네트워크와 다르다. 즉, 다른 노드에 존재한 파드와 통신하려면 노드의 대역폭을 한번 거쳐가야 한다. 그렇기에 같은 노드 상의 파드와 통신하는 건 문제가 없어도, 다른 노드 상의 파드와 통신하는 건 문제가 된다. 이를 위해 터널링 기술을 사용한다. 다른 노드에 위치한 파드에게 트래픽을 전송할 때는 터널링을 통해 기존의 src/dst를 숨기고 터널링을 위한 노드의 IP를 src/dst로 트래픽을 감싼다. 파드는 고유한 IP를 가진다. 즉, CNI를 통해 목적지 네트워크를 파드가 아닌, 파드가 위치한 호스트로 설정해야 한다. 이를 위해 하나의 층을 쌓아 캡슐화를 진행한다.
 
 
-![1_JqSLd3cPv14BWDtE7YEcRA.webp](/assets/img/post/파드%20네트워크%20이해하기/2.webp)
+![](/assets/img/post/파드%20네트워크%20이해하기/2.webp)
 [출처: https://www.sobyte.net/post/2023-02/k8s-openshift/]
 
 이제 실습을 통해, 위의 내용을 확인한다.
