--- a/_posts/2024-01-12-서비스 네트워크 모델 이해하기.md
+++ b/_posts/2024-01-12-서비스 네트워크 모델 이해하기.md
@@ -6,7 +6,7 @@ description: 쿠버네티스 서비스 네트워크 이해하기
 category: [Kubernetes, Network] 
 tags: [Kubernetes, Services, Network, CNI, Flannel] 
 image:
-  path: assets/img/logo/Kubernetes/logo2.png
+  path: assets/img/logo/Kubernetes/logo3.png
   alt: Kubernetes Logo
 pin: false
 math: true
@@ -49,7 +49,7 @@ mermaid: true
 쿠버네티스는 리눅스 커널 기능 중 하나인 [netfilter](https://en.wikipedia.org/wiki/Netfilter)와 user space에 존재하는 인터페이스인 [iptables](https://en.wikipedia.org/wiki/Iptables)라는 소프트웨어를 이용하여 패킷 흐름을 제어한다. [netfilter](https://en.wikipedia.org/wiki/Netfilter)란 규칙기반 패킷 처리 엔진이며, kernel space에 위치하여 모든 오고 가는 패킷을 관찰한다. 그리고 규칙에 매칭되는 패킷을 발견하면, SRC/DST등을 바꾸는 등 미리 정의된 행동을 수행한다.
 
 
-![1_Pz-NixxBDbSnuPGyp8UWHQ.webp](/assets/img/post/서비스%20네트워크%20모델%20이해하기/1.webp)
+![](/assets/img/post/서비스%20네트워크%20모델%20이해하기/1.webp)
 
 
 [출처: [https://en.m.wikipedia.org/wiki/File:Netfilter-packet-flow.svg](https://en.m.wikipedia.org/wiki/File:Netfilter-packet-flow.svg)]
