update: post 정리

--- a/_posts/2023-11-11-eks-스터디-7주차.md
+++ b/_posts/2023-11-11-eks-스터디-7주차.md
@@ -13,30 +13,31 @@ math: true
 mermaid: true
 ---
 CloudNet에서 주관하는 EKS 스터디 7주차를 진행하며 배운 내용을 정리한다.
-<!--more-->
-## 요약
 
-먼저, 이번 과제를 마지막으로 EKS 스터디는 끝이났다. 스터디 완주와 귀여운 Go 캐릭터들이 모여 기쁘다. 스터디를 하면서 많은 일들이 있었다. (실수로 AWS 토큰을 노출해서, 메일도 날라오고..) EKS 실무 관련 경험이 없었는 데, 정말 많은 이론을 배우고, 따라하며 익힐 수 있었다. 앞으로 복습을 하며 추후 예정으로 미뤄뒀던 실습과 이론을 진행하면서 내용을 세부화해서 포스팅할 예정이다.
+*아래에 사용된 이미지의 저작권은 [CloudNet](https://www.notion.so/c9dfa44a27ff431dafdd2edacc8a1863)에 있습니다.*
+
+<!--more-->
+먼저, 이번 과제를 마지막으로 EKS 스터디는 끝이났다. 스터디 완주와 귀여운 Go 캐릭터들이 모여 기쁘다. 스터디를 하면서 많은 일들이 있었다. (처음 포스팅을 해보고, 실수로 AWS 토큰을 노출해서 메일도 날라오고..)EKS 실무 관련 경험이 없었는 데, 정말 많은 이론을 배우고, 따라하며 익힐 수 있었다. 아직 쿠버네티스 입문 단계이기에 많은 부분이 생소하고 어려웠다. 하지만, 이번 스터디를 통해 많은 것을 배울 수 있었고, 앞으로도 계속해서 공부해야겠다는 생각이 든다.
 
 **그동안 스터디를 준비해주신 가시다님과 CloudNet 팀 덕분에 많이 배울 수 있었다.** 
 스터디에 관심있으신 분은 [CloudNet](https://gasidaseo.notion.site/CloudNet-Blog-c9dfa44a27ff431dafdd2edacc8a1863)에서 확인할 수 있습니다!
 
-이번 주차의 주제는 Automation이다. ACK와 Flux에 대해 실습을 진행하고, 아주 간단히 ArgoCD를 진행한다. 
+
+## 요약
+이번 주차의 주제는 Automation이다. 클라우드를 모르는 개발자가 사용하기에 적합한 서비스인 AWS Controller for Kubernetes (ACK)에 대해 배우고, GitOps 가능한 Flux, ArgoCD에 대해 실습을 진행했다.
+
 
 ## AWS Controller for Kubernetes (ACK)
-
-AWS에서 제작한 오픈소스 툴이며, 클라우드를 잘 모르는 개발자?에게 좋을 듯하다. 하지만 아직 정식으로 오픈한 서비스가 많아보이진 않는다. 
+ACK는 AWS에서 제작한 오픈소스 툴이며, 쿠버네티스에서 직접 AWS 서비스를 정의하고 사용할 수 있다. 하지만 아직 정식으로 오픈한 서비스가 많아보이진 않는다. 
 자세한 내용은 [공식문서](https://github.com/aws-controllers-k8s/community) 참고!
 
-> `ACK` : **aws** 서비스 리소스를 **k8s** 에서 직접 **정의**하고 **사**용 할 수 있음
-> 
 
 
 ![](https://velog.velcdn.com/images/han-0315/post/8ae3cdfe-0c69-40a7-aa58-f9177187419c/image.png)
 
 
 - **S3 실습 진행**
-
+S3를 쿠버네티스에서 직접 정의하고 사용하는 실습을 진행한다.
 우선, ACK S3 controller를 받는다.
 
 ```bash
@@ -86,7 +87,7 @@ $tree ~/$SERVICE-chart
 2 directories, 15 files
 ```
 
-**받은 helm 차트를 배포!**
+**받은 helm 차트를 통해 배포를 진행한다.**
 
 ```bash
 $export ACK_SYSTEM_NAMESPACE=ack-system
@@ -119,7 +120,7 @@ https://aws-controllers-k8s.github.io/community/
 
 ```
 
-이제, 배포를 확인한다.
+**[배포된 리소스 확인]**
 
 ```bash
 $helm list --namespace $ACK_SYSTEM_NAMESPACE
@@ -194,7 +195,7 @@ $eksctl create iamserviceaccount \
 
 ![](https://velog.velcdn.com/images/han-0315/post/894eaa53-2f5c-426f-b4b6-fb101673469b/image.png)
 
-터미널에서 자세한 내용 확인
+터미널에서 자세하게 서비스 어카운트 내용을 확인해보자.
 
 ```bash
 # 생성 확인
@@ -338,7 +339,7 @@ Events:
 
 **이제, S3 관련 테스트를 진행한다.** 
 
-1. Bucket 생성 
+- Bucket 생성 
 
 ```bash
 $export AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query "Account" --output text)
@@ -384,7 +385,7 @@ $aws s3 ls | grep $BUCKET_NAME
 
 ```
 
-1. **S3 버킷 업데이트 : 태그 정보 입력**
+- **S3 버킷 업데이트 : 태그 정보 입력**
 
 ```bash
 $read -r -d '' BUCKET_MANIFEST <<EOF
@@ -408,7 +409,7 @@ bucket.s3.services.k8s.aws/my-ack-s3-bucket-011116120544 configured
 
 ```
 
-S3 버킷 업데이트 결과를 확인한다. 
+- **S3 버킷 업데이트 결과를 확인한다.**
 
 ```bash
 $kubectl describe bucket/$BUCKET_NAME | grep Spec: -A5
@@ -429,12 +430,12 @@ Spec:
 
 ```
 
-콘솔에서도 값 변경 확인
+**콘솔에서도 값 변경이 확인된다.**
 
 ![](https://velog.velcdn.com/images/han-0315/post/bf8071e4-0f5d-4f1d-ace5-862d2cda893d/image.png)
 
 
-이제 실습을 종료하고, 자원을 삭제한다.
+실습을 통해 쿠버네티스에서 AWS 리소스를 관리할 수 있었다. 이제 실습을 종료하고 리소스를 삭제한다.
 
 ```bash
 $kubectl delete -f bucket.yaml
@@ -466,9 +467,9 @@ argocd와 유사한 gitops 툴이다. **kustomize에 특화된 도구이며, 테
 하지만, helm or kustomize에 의존적이다.
 
 > 자세한 내용은 악분님 블로그 참고 [Blog](https://malwareanalysis.tistory.com/612)
-> 
 
-Flux 설치한다.
+
+**[Flux 설치한다.]**
 
 ```bash
 $curl -s https://fluxcd.io/install.sh | sudo bash
@@ -568,7 +569,7 @@ flux-system   ssh://git@github.com/han/fleet-infra   25s   True    stored artifa
 
 ```
 
-Gitops 도구를 설치한다.
+GitOps 도구를 설치한다.
 
 ```bash
 $curl --silent --location "https://github.com/weaveworks/weave-gitops/releases/download/v0.24.0/gitops-$(uname)-$(uname -m).tar.gz" | tar xz -C /tmp
@@ -617,8 +618,10 @@ service/notification-controller   ClusterIP   10.100.0.14      <none>        80/
 service/source-controller         ClusterIP   10.100.20.46     <none>        80/TCP     2m15s
 service/webhook-receiver          ClusterIP   10.100.76.241    <none>        80/TCP     2m15s
 service/ww-gitops-weave-gitops    ClusterIP   10.100.101.129   <none>        9001/TCP   46s
+```
 
-# External DNS 연결을 위한 ingress 설정
+**[External DNS 연결을 위한 ingress 설정]**
+```bash
 $CERT_ARN=`aws acm list-certificates --query 'CertificateSummaryList[].CertificateArn[]' --output text`
 $echo $CERT_ARN
 arn:aws:acm:ap-northeast-2:011116120544:certificate/836b6dfa-0955-4401-a721-ecd8689b6025
@@ -665,21 +668,21 @@ GitOps Web https://gitops.dongmin.link
 
 ```
 
-웹 UI 모습
+이제 설정이 완료되고 출력되는 URL에 따라 들어가면 아래와 같은 모습을 볼 수 있다. 
 
 ![](https://velog.velcdn.com/images/han-0315/post/0a222184-36a6-4eeb-8a07-9be1189f797a/image.png)
 
 
-소스 생성 방식
+소스 생성 방식은 다음과 같다.
 
 > 소스 생성 : 유형 - git, helm, oci, bucket
 `flux create source {소스 유형}`
 > 
 
-테스트 진행
+이제 GitOps 테스트를 진행해보자. 
+악분(최성욱)님이 준비한 repo로 git 소스 생성한다.
 
 ```bash
-#악분(최성욱)님이 준비한 repo로 git 소스 생성
 $GITURL="https://github.com/sungwook-practice/fluxcd-test.git"
 $flux create source git nginx-example1 --url=$GITURL --branch=main --interval=30s
 ✚ generating GitRepository source
@@ -693,14 +696,18 @@ $flux get sources git
 NAME          	REVISION          	SUSPENDED	READY	MESSAGE
 flux-system   	main@sha1:cb4137dd	False    	True 	stored artifact for revision 'main@sha1:cb4137dd'
 nginx-example1	main@sha1:4478b54c	False    	True 	stored artifact for revision 'main@sha1:4478b54c'
+```
 
-# 악분님 repo와 연결된 것을 확인할 수 있음
+악분님 repo와 연결된 것을 확인할 수 있다.
+```bash
 $kubectl -n flux-system get gitrepositories
 NAME             URL                                                    AGE   READY   STATUS
 flux-system      ssh://git@github.com/han../fleet-infra              40m   True    stored artifact for revision 'main@sha1:cb4137dd69c7891da32982d5991deb9ebd901278'
 nginx-example1   https://github.com/sungwook-practice/fluxcd-test.git   37s   True    stored artifact for revision 'main@sha1:4478b54cb7a8eaf1ee2665e2b3dd5bcfd55e9da9'
+```
 
-# 배포
+**[이제 nginx를 배포해보자.]**
+```bash
 $flux create kustomization nginx-example1 --target-namespace=default --interval=1m --source=nginx-example1 --path="./nginx" --health-check-timeout=2m
 ✚ generating Kustomization
 ► applying Kustomization
@@ -819,3 +826,5 @@ argocd-server   LoadBalancer   10.100.98.251   a677d8882cdab494ebfee894df436abc-
 ![](https://velog.velcdn.com/images/han-0315/post/cedb45bd-ed25-4216-a7f1-f9177f3faa23/image.png)
 
 
+### 마무리
+이렇게 7주간의 CloudNet EKS 스터디를 마무리하게 되었다. 확실히 현업자 대상 스터디라서 수준이 높았고, CloudFormation과 명령어를 사전에 준비해주셔서 너무 편하게 실습했다. 아직 부족한 부분이 너무 많아, 이해하기 힘들었지만 EKS와 쿠버네티스를 현업에서는 어떤 식으로 사용하는지 '감'을 잡을 수 있어 좋았다.
