--- a/_posts/2024-01-10-파드 네트워크 이해하기.md
+++ b/_posts/2024-01-10-파드 네트워크 이해하기.md
@@ -6,7 +6,7 @@ description: 쿠버네티스 파드 네트워크 이해하기
 category: [Kubernetes, Network] 
 tags: [Kubernetes, Network, CNI, Flannel] 
 image:
-  path: assets/img/logo/Kubernetes/logo3.png
+  path: /assets/img/logo/Kubernetes/logo3.png
   alt: Kubernetes Logo
 pin: false
 math: true
@@ -19,7 +19,7 @@ mermaid: true
 ## Pod Network
 
 
-파드에서 사용되는 네트워크 모델에 대해 알아본다. 파드 네트워크를 담당하는 것은 주로 CNI이다. 그렇기에 CNI에 따라 네트워크 동작방식이 다르다. k3s를 통해 실습을 진행했기에 Flannel을 기준으로 진행한다.(k3s 이기에 세부적인 내용은 다를 수 있습니다.) 앞으로  하나의 파드안에 있는 컨테이너 통신, 같은 노드 내의 파드 통신, 다른 노드에 위치하는 파드 간 통신에 대해 알아본다.
+파드에서 사용되는 네트워크 모델에 대해 알아본다. 파드 네트워크를 담당하는 것은 주로 CNI이다. 그렇기에 CNI에 따라 네트워크 동작방식이 다르다. k3s를 통해 실습을 진행했기에 Flannel을 기준으로 진행한다.(k3s 이기에 세부적인 내용은 다를 수 있다.) 앞으로  하나의 파드안에 있는 컨테이너 통신, 같은 노드 내의 파드 통신, 다른 노드에 위치하는 파드 간 통신에 대해 알아본다.
 
 
 ## 파드 내부 통신(Container 내부 네트워크 확인)
@@ -28,7 +28,7 @@ mermaid: true
 CNI에 의해 각 파드에 고유한 IP 주소가 할당된다. 네트워크 인터페이스도 생성된다. Docker와 다르게 파드는 내부의 **모든 컨테이너는 IP 주소와 네트워크 포트를 포함한 모든 네트워크 스택을 공유한다.** 즉, 파드 내부의 컨테이너는 로컬호스트를 통해 서로 통신할 수 있다. 그렇기에 만약 같은 포트를 사용하는 컨테이너를 중복 생성하면 오류가 발생한다.
 
 
-파드 내의 컨테이너를 외부로 노출하기 위해서 Container Port를 사용합니다. 해당 포트를 통해 외부와 통신할 수 있다. 
+파드 내의 컨테이너를 외부로 노출하기 위해서 Container Port를 사용한다. 해당 포트를 통해 외부와 통신할 수 있다. 
 
 
 ### 파드 생성
@@ -116,7 +116,7 @@ tcp        0      0 127.0.0.1:56286         127.0.0.1:80            TIME_WAIT   
 ```
 
 
-Nginx가 사용하는 **port::80**를 확인할 수 있습니다.
+Nginx가 사용하는 **port::80**를 확인할 수 있다.
 
 
 #### 3. Web 컨테이너에 접속하여 포트를 추가로 확장한다. 
@@ -127,7 +127,7 @@ kubectl exec test -it -c web -- /bin/bash
 ```
 
 
-아래의 명령어를 실행합니다. 추가적으로 8080포트도 개방한다.
+아래의 명령어를 실행한다. 추가적으로 8080포트도 개방한다.
 
 
 ```bash
@@ -228,21 +228,21 @@ $ ip addr show
 
 
 > 💡 **With ChatGPT-4**  
-> 1. `lo`: 루프백 인터페이스입니다. 루프백 인터페이스는 컴퓨터가 자기 자신과 통신하는 데 사용되며, 주로 네트워크 소프트웨어 테스트에 사용됩니다.  
+> 1. `lo`: 루프백 인터페이스이다. 루프백 인터페이스는 컴퓨터가 자기 자신과 통신하는 데 사용되며, 주로 네트워크 소프트웨어 테스트에 사용된다.  
 >   
-> 2. `eth0`: 첫 번째 이더넷 인터페이스를 나타냅니다. 이 인터페이스는 일반적으로 물리적 네트워크 연결에 사용됩니다.  
+> 2. `eth0`: 첫 번째 이더넷 인터페이스를 나타냅니다. 이 인터페이스는 일반적으로 물리적 네트워크 연결에 사용된다.  
 >   
-> 3. `flannel.1`: flannel 네트워크 인터페이스입니다. 오버레이 네트워크 솔루션 중 하나로, 다른 노드의 파드와 통신할 수 있게 합니다.  
+> 3. `flannel.1`: flannel 네트워크 인터페이스이다. 오버레이 네트워크 솔루션 중 하나로, 다른 노드의 파드와 통신할 수 있게 한다.  
 >   
-> 4. `cni0`: Container Network Interface (CNI) 네트워크 인터페이스입니다.  
+> 4. `cni0`: Container Network Interface (CNI) 네트워크 인터페이스이다.  
 >   
-> 5. `vetha2194963@if2`: 이것은 가상 이더넷 (veth) 페어 중 하나입니다. veth 페어는 두 개의 가상 네트워크 인터페이스로 구성되며, 하나는 컨테이너 내부에, 다른 하나는 컨테이너 외부에 위치합니다. 이들은 서로에게 패킷을 전달하여 컨테이너와 외부 세계 사이의 네트워크 통신을 가능하게 합니다. 이 인터페이스는 `cni0`에 연결되어 있습니다.
+> 5. `vetha2194963@if2`: 이것은 가상 이더넷 (veth) 페어 중 하나이다. veth 페어는 두 개의 가상 네트워크 인터페이스로 구성되며, 하나는 컨테이너 내부에, 다른 하나는 컨테이너 외부에 위치한다. 이들은 서로에게 패킷을 전달하여 컨테이너와 외부 세계 사이의 네트워크 통신을 가능하게 한다. 이 인터페이스는 `cni0`에 연결되어 있다.
 
-	1. `lo`: 루프백 인터페이스입니다. 루프백 인터페이스는 컴퓨터가 자기 자신과 통신하는 데 사용되며, 주로 네트워크 소프트웨어 테스트에 사용됩니다.
-	2. `eth0`: 첫 번째 이더넷 인터페이스를 나타냅니다. 이 인터페이스는 일반적으로 물리적 네트워크 연결에 사용됩니다.
-	3. `flannel.1`: flannel 네트워크 인터페이스입니다. 오버레이 네트워크 솔루션 중 하나로, 다른 노드의 파드와 통신할 수 있게 합니다.
-	4. `cni0`: Container Network Interface (CNI) 네트워크 인터페이스입니다.
-	5. `vetha2194963@if2`: 이것은 가상 이더넷 (veth) 페어 중 하나입니다. veth 페어는 두 개의 가상 네트워크 인터페이스로 구성되며, 하나는 컨테이너 내부에, 다른 하나는 컨테이너 외부에 위치합니다. 이들은 서로에게 패킷을 전달하여 컨테이너와 외부 세계 사이의 네트워크 통신을 가능하게 합니다. 이 인터페이스는 `cni0`에 연결되어 있습니다.
+	1. `lo`: 루프백 인터페이스이다. 루프백 인터페이스는 컴퓨터가 자기 자신과 통신하는 데 사용되며, 주로 네트워크 소프트웨어 테스트에 사용된다.
+	2. `eth0`: 첫 번째 이더넷 인터페이스를 나타냅니다. 이 인터페이스는 일반적으로 물리적 네트워크 연결에 사용된다.
+	3. `flannel.1`: flannel 네트워크 인터페이스이다. 오버레이 네트워크 솔루션 중 하나로, 다른 노드의 파드와 통신할 수 있게 한다.
+	4. `cni0`: Container Network Interface (CNI) 네트워크 인터페이스이다.
+	5. `vetha2194963@if2`: 이것은 가상 이더넷 (veth) 페어 중 하나이다. veth 페어는 두 개의 가상 네트워크 인터페이스로 구성되며, 하나는 컨테이너 내부에, 다른 하나는 컨테이너 외부에 위치한다. 이들은 서로에게 패킷을 전달하여 컨테이너와 외부 세계 사이의 네트워크 통신을 가능하게 한다. 이 인터페이스는 `cni0`에 연결되어 있다.
 
 위의 그림에서 확인한 veth과 cni0을 확인할 수 있다. 5번에서 자세히 확인하면 “master cni0”를 볼 수 있다. 이는 일반적으로 cni0과 연결되어 있고 네트워크 브릿지를 나타낸다. 리눅스 브릿지 VLAN 구성을 출력하는 `bridge vlan` 명령어를 통해 확인하면 두 인터페이스가 브릿지 형태로 연결된 것을 볼 수 있다.
 
@@ -255,7 +255,7 @@ vetha2194963      1 PVID Egress Untagged
 ```
 
 
-veth은 각 파드에 위치하며, cni를 통해 각 veth은 브릿지 형태로 연결되어있다. 위의 veth도 어떤 파드에 연결되어있습니다. 어떤 파드인지 확인한다. 아래와 같이 워커노드에 배포된 파드를 확인할 수 있다. 이는 모든 노드에 배포되는 프록시 서버역할을 하는 파드이다. 
+veth은 각 파드에 위치하며, cni를 통해 각 veth은 브릿지 형태로 연결되어있다. 위의 veth도 어떤 파드에 연결되어있다. 어떤 파드인지 확인한다. 아래와 같이 워커노드에 배포된 파드를 확인할 수 있다. 이는 모든 노드에 배포되는 프록시 서버역할을 하는 파드이다. 
 
 
 ```bash
@@ -519,7 +519,7 @@ AWS 보안그룹에서, 아래와 사진과 같이 포트를 개방한다.
 ![Untitled.png](/assets/img/post/파드%20네트워크%20이해하기/3.png)
 
 
-설정을 완료한 후, 다시 Ping 테스트를 진행합니다. 정상적으로 작동하는 것을 확인할 수 있다.
+설정을 완료한 후, 다시 Ping 테스트를 진행한다. 정상적으로 작동하는 것을 확인할 수 있다.
 
 
 ```bash
