--- a/_posts/2023-11-11-eks-스터디-3주차.md
+++ b/_posts/2023-11-11-eks-스터디-3주차.md
@@ -13,26 +13,125 @@ math: true
 mermaid: true
 ---
 CloudNet에서 주관하는 EKS 스터디 3주차를 진행하며 배운 내용을 정리한다.
+
+*아래에 사용된 이미지의 저작권은 [CloudNet](https://www.notion.so/c9dfa44a27ff431dafdd2edacc8a1863)에 있습니다*
+
 <!--more-->
 
-### 요약
-이번주에는 스토리지와 관련된 부분을 배웠습니다. 순서는 EKS 배포 환경, LB, External DNS 등 2주차 내용에 이어 추가적으로 진행하는 부분, 스토리지에 대한 이해와 각 방식에 대한 실습을 진행한 뒤 EBS, EFS 를 적용해보는 것으로 마무리됩니다. 
+## 요약
+이번 포스트에서는 도메인 등록문제로 2주차때 진행하지 못했던 실습과 EKS에서 Storage 관련 내용을 직접 실습해본다. 저장 방식인 emptyDir, localPath, PV/PVC를 다뤄본다. 특히 PV/PVC에서는 AWS 서비스인 EBS, EFS를 사용하는 방법을 다룬다.
+
+### 진행 순서
+- 2주차 추가진행: 도메인 등록 및 External DNS 적용
+- Volume 유형 학습
+- EmptyDir 실습 및 특징 확인
+- Local(HostPath) 실습 및 특징 확인
+- PV/PVC 실습 및 특징 확인
+  - EBS Controller(동적프로비저닝, 스냅샷을 통한 복구)
+  - EFS Controller(정적, 동적 프로비저닝)
+
+## 2주차 추가진행
+
+**aws-load-balancer-controller 설치한다.**
+
+```bash
+$helm repo add eks https://aws.github.io/eks-charts
+"eks" has been added to your repositories
+
+$helm repo update
+Hang tight while we grab the latest from your chart repositories...
+...Successfully got an update from the "eks" chart repository
+Update Complete. ⎈Happy Helming!⎈
+
+$helm install aws-load-balancer-controller eks/aws-load-balancer-controller -n kube-system --set clusterName=$CLUSTER_NAME \
+>   --set serviceAccount.create=false --set serviceAccount.name=aws-load-balancer-controller
+
+NAME: aws-load-balancer-controller
+LAST DEPLOYED: Sun May  7 23:47:07 2023
+NAMESPACE: kube-system
+STATUS: deployed
+REVISION: 1
+TEST SUITE: None
+NOTES:
+AWS Load Balancer controller installed!
+```
+
+**External DNS 적용 : 개인 도메인은 사전에 준비필요!**
+
+```bash
+$echo $MyDomain, $MyDnzHostedZoneId
+kaneawsdns.com, /hostedzone/Z06702063E7RRITLLMJRM
+#사전에 관련 매니패스트 파일을 준비해주셨다.
+
+$curl -s -O https://raw.githubusercontent.com/gasida/PKOS/main/aews/externaldns.yaml
+
+# External DNS 배포
+$MyDomain=$MyDomain MyDnzHostedZoneId=$MyDnzHostedZoneId envsubst < externaldns.yaml | kubectl apply -f -
+```
+
+위의 `envsubst` 명령어에 대한 간단한 설명
+
+`envsubst` : 현재 환경변수를 수레에서 사용가능한 변수로 치한 → 앞의 MyDomain, MyDnzHostedZoneId를 알맞게 externaldns.yaml 파일에 적용킨 후 해당 yaml 파일을 `kubectl apply` 한다
+
+매니패스트 파일은 service account, cluster role, cluster role binding, deployment, service, configmap 등이 포함되어 있다 토글에는 자세한 내용이 담겨있다 자세한 내용은 [링크](https://raw.githubusercontent.com/gasida/PKOS/main/aews/externaldns.yaml)를 통해서 확인할 수 있다
+
+이제 UI 툴인 kube-ops-view를 설치해보겠다
+
+**kubeops 설치**
+
+```bash
+#repo 추가 
+$helm repo add geek-cookbook https://geek-cookbook.github.io/charts/
+"geek-cookbook" has been added to your repositories
+#kube-ops-view 설치
+$helm install kube-ops-view geek-cookbook/kube-ops-view --version 1.2.2 --set env.TZ="Asia/Seoul" --namespace kube-system
+NAME: kube-ops-view
+LAST DEPLOYED: Sun May  7 23:53:13 2023
+NAMESPACE: kube-system
+STATUS: deployed
+REVISION: 1
+TEST SUITE: None
+NOTES:
+1. Get the application URL by running these commands:
+  export POD_NAME=$(kubectl get pods --namespace kube-system -l "app.kubernetes.io/name=kube-ops-view,app.kubernetes.io/instance=kube-ops-view" -o jsonpath="{.items[0].metadata.name}")
+  echo "Visit http://127.0.0.1:8080 to use your application"
+  kubectl port-forward $POD_NAME 8080:8080
+
+#kube-ops-view 서비스의 타입을 "loadBalancer"로 변경하는 모습, patch는 수정할 때 쓰는 명령어
+#`-p` 옵션은 json 형태로 수정할 때
+$kubectl patch svc -n kube-system kube-ops-view -p '{"spec":{"type":"LoadBalancer"}}'
+service/kube-ops-view patched
+#서비스에 대한 외부 도메인을 주석으로 달아줌(annotate 주석)
+$kubectl annotate service kube-ops-view -n kube-system "external-dns.alpha.kubernetes.io/hostname=kubeopsview.$MyDomain"
+service/kube-ops-view annotated
+$echo -e "Kube Ops View URL = http://kubeopsview.$MyDomain:8080/#scale=1.5"
+Kube Ops View URL = http://kubeopsview.kaneawsdns.com:8080/#scale=1.5
+```
+
+아래는 kubeops 실제 화면이다. 큰 클러스터안에 노드별로 구분되어있는 것을 확인할 수 있다
+
+- 파드의 개수를 늘린 모습, 가져다가 되면 구체적으로 정보가 나온다.
+
+위의 `DEFAULT`로 나와있는 부분은 출력형식을 지정하는 것이다. 
+파드는 네임스페이스에 따라 구분된다.
+
+![](https://velog.velcdn.com/images/han-0315/post/ddf4ee4b-a9d7-411e-87ff-53d5e2833810/image.png)
 
 
-### 환경 배포 
+## 환경 배포 
 
-환경배포파일이 저번주와 달라졌습니다. 기존에 것에서 저번주차와 이번주차 진행할 내용들이 추가되었습니다. 
-앞으로 실습내용을 작업용 EC2에서도 확인하기 위해 EFS를 마운트합니다. 
+환경배포파일이 저번주와 달라졌다 기존에 것에서 저번주차와 이번주차 진행할 내용들이 추가되었다.
+앞으로 실습내용을 작업용 EC2에서도 확인하기 위해 EFS를 마운트한다 
 
 `mount -t nfs4 -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport ***<자신의 EFS FS ID>***.efs.ap-northeast-2.amazonaws.com:/ /mnt/myefs`
 
 `kubectl config rename-context admin@myeks.ap-northeast-2.eksctl.io [원하는 이름]@myeks`
-실습환경에서  AWS LB/ExternalDNS, kube-ops-view를 추가적으로 설치합니다. 설치과정은 아래에서 확인할 수 있습니다.
+실습환경에서  AWS LB/ExternalDNS, kube-ops-view를 추가적으로 설치한다 설치과정은 아래에서 확인할 수 있다
 
 
 ### 배포설정
 
-먼저, 기본적인 환경세팅을 진행합니다. 아까 위에서 나왔던 context 변경부터 진행합니다. 
+먼저, 기본적인 환경세팅을 진행한다 아까 위에서 나왔던 context 변경부터 진행한다 
 
 **context 변경**
 
@@ -67,9 +166,9 @@ volumeBindingMode: WaitForFirstConsumer
 
 ```
 
-이제 eks의 모든 노드들이 csinode인지 확인합니다.
+이제 eks의 모든 노드들이 csinode인지 확인한다
 **csinodes**
-"kubectl get csinodes" 명령은 Kubernetes 클러스터에서 사용 가능한 모든 CSINode(CSI Node)을 나열합니다. CSINode은 Container Storage Interface(CSI) 스펙을 준수하는 노드입니다. CSI 스펙은 Kubernetes 클러스터에서 다양한 스토리지 시스템과의 통합을 위한 표준 인터페이스를 제공합니다.
+"kubectl get csinodes" 명령은 Kubernetes 클러스터에서 사용 가능한 모든 CSINode(CSI Node)을 나열한다 CSINode은 Container Storage Interface(CSI) 스펙을 준수하는 노드이다. CSI 스펙은 Kubernetes 클러스터에서 다양한 스토리지 시스템과의 통합을 위한 표준 인터페이스를 제공한다
 
 ```bash
 $k get csinodes
@@ -79,7 +178,7 @@ ip-192-168-2-116.ap-northeast-2.compute.internal   0         26m
 ip-192-168-3-151.ap-northeast-2.compute.internal   0         26m 
 ```
 
-`--label-columns` 옵션을 통해 eks node를 조회한 모습입니다. 
+`--label-columns` 옵션을 통해 eks node를 조회한 모습이다. 
 
 ```bash
 $kubectl get node --label-columns=node.kubernetes.io/instance-type,eks.amazonaws.com/capacityType,topology.kubernetes.io/zone
@@ -92,165 +191,32 @@ $eksctl get iamidentitymapping --cluster myeks
 ARN											USERNAME				GROUPS					ACCOUNT
 arn:aws:iam::871103481195:role/eksctl-myeks-nodegroup-ng1-NodeInstanceRole-WBR1ZJTQNHTR	system:node:{{EC2PrivateDNSName}}	system:bootstrappers,system:nodes
 ```
-### 2주차 추가진행
+배포가 모두 완료되었다. 이제 이번 주차의 주제인 스터리지에 대해 알아본다. 
+우선 EKS에서 사용하는 스토리지의 종류에 대해 알아보자
 
-**보안그룹 추가**
-
-"--protocol '-1'"은 모든 프로토콜을 허용하도록 설정하는 것을 의미합니다. 이 플래그를 사용하여 TCP, UDP 및 ICMP를 비롯한 모든 프로토콜에 대한 트래픽을 허용할 수 있습니다.
-
-"--cidr"은 허용할 IP 대역을 지정합니다. 여기서는 "192.168.1.100/32"라는 단일 IP 주소를 허용하도록 설정하였습니다.
-
-```bash
-$aws ec2 authorize-security-group-ingress --group-id $NGSGID --protocol '-1' --cidr 192.168.1.100/32
-{
-    "Return": true,
-    "SecurityGroupRules": [
-        {
-            "SecurityGroupRuleId": "sgr-0bb4b08586cfb50c5",
-            "GroupId": "sg-0c78cd151603fbd80",
-            "GroupOwnerId": "871103481195",
-            "IsEgress": false,
-            "IpProtocol": "-1",
-            "FromPort": -1,
-            "ToPort": -1,
-            "CidrIpv4": "192.168.1.100/32"
-        }
-    ]
-}
-```
-
-<!-- 각 노드에  tcp dump 추가
-
-```bash
-# 워커 노드 SSH 접속
-ssh ec2-user@$N1 hostname
-ssh ec2-user@$N2 hostname
-ssh ec2-user@$N3 hostname
-
-# 노드에 툴 설치
-ssh ec2-user@$N1 sudo yum install links tree jq tcpdump sysstat -y
-ssh ec2-user@$N2 sudo yum install links tree jq tcpdump sysstat -y
-ssh ec2-user@$N3 sudo yum install links tree jq tcpdump sysstat -y
-``` -->
-
-**aws-load-balancer-controller 설치한다.**
-
-```bash
-$helm repo add eks https://aws.github.io/eks-charts
-"eks" has been added to your repositories
-
-$helm repo update
-Hang tight while we grab the latest from your chart repositories...
-...Successfully got an update from the "eks" chart repository
-Update Complete. ⎈Happy Helming!⎈
-
-$helm install aws-load-balancer-controller eks/aws-load-balancer-controller -n kube-system --set clusterName=$CLUSTER_NAME \
->   --set serviceAccount.create=false --set serviceAccount.name=aws-load-balancer-controller
-
-NAME: aws-load-balancer-controller
-LAST DEPLOYED: Sun May  7 23:47:07 2023
-NAMESPACE: kube-system
-STATUS: deployed
-REVISION: 1
-TEST SUITE: None
-NOTES:
-AWS Load Balancer controller installed!
-```
-**External DNS 적용 : 개인 도메인은 사전에 준비필요!**
-
-```bash
-$echo $MyDomain, $MyDnzHostedZoneId
-kaneawsdns.com, /hostedzone/Z06702063E7RRITLLMJRM
-#사전에 관련 매니패스트 파일을 준비해주셨다.
-
-$curl -s -O https://raw.githubusercontent.com/gasida/PKOS/main/aews/externaldns.yaml
-
-# External DNS 배포
-$MyDomain=$MyDomain MyDnzHostedZoneId=$MyDnzHostedZoneId envsubst < externaldns.yaml | kubectl apply -f -
-```
-
-위의 `envsubst` 명령어에 대한 간단한 설명
-
-`envsubst` : 현재 환경변수를 수레에서 사용가능한 변수로 치한 → 앞의 MyDomain, MyDnzHostedZoneId를 알맞게 externaldns.yaml 파일에 적용킨 후 해당 yaml 파일을 `kubectl apply` 합니다.
-
-매니패스트 파일은 service account, cluster role, cluster role binding, deployment, service, configmap 등이 포함되어 있습니다. 토글에는 자세한 내용이 담겨있습니다. 자세한 내용은 [링크](https://raw.githubusercontent.com/gasida/PKOS/main/aews/externaldns.yaml)를 통해서 확인할 수 있습니다.
-
-이제 UI 툴인 kube-ops-view를 설치해보겠습니다.
-
-**kubeops 설치**
-
-```bash
-#repo 추가 
-$helm repo add geek-cookbook https://geek-cookbook.github.io/charts/
-"geek-cookbook" has been added to your repositories
-#kube-ops-view 설치
-$helm install kube-ops-view geek-cookbook/kube-ops-view --version 1.2.2 --set env.TZ="Asia/Seoul" --namespace kube-system
-NAME: kube-ops-view
-LAST DEPLOYED: Sun May  7 23:53:13 2023
-NAMESPACE: kube-system
-STATUS: deployed
-REVISION: 1
-TEST SUITE: None
-NOTES:
-1. Get the application URL by running these commands:
-  export POD_NAME=$(kubectl get pods --namespace kube-system -l "app.kubernetes.io/name=kube-ops-view,app.kubernetes.io/instance=kube-ops-view" -o jsonpath="{.items[0].metadata.name}")
-  echo "Visit http://127.0.0.1:8080 to use your application"
-  kubectl port-forward $POD_NAME 8080:8080
-
-#kube-ops-view 서비스의 타입을 "loadBalancer"로 변경하는 모습, patch는 수정할 때 쓰는 명령어
-#`-p` 옵션은 json 형태로 수정할 때
-$kubectl patch svc -n kube-system kube-ops-view -p '{"spec":{"type":"LoadBalancer"}}'
-service/kube-ops-view patched
-#서비스에 대한 외부 도메인을 주석으로 달아줌(annotate 주석)
-$kubectl annotate service kube-ops-view -n kube-system "external-dns.alpha.kubernetes.io/hostname=kubeopsview.$MyDomain"
-service/kube-ops-view annotated
-$echo -e "Kube Ops View URL = http://kubeopsview.$MyDomain:8080/#scale=1.5"
-Kube Ops View URL = http://kubeopsview.kaneawsdns.com:8080/#scale=1.5
-```
-
-아래는 kubeops 실제 화면입니다. 큰 클러스터안에 노드별로 구분되어있는 것을 확인할 수 있습니다.
-
-- 파드의 개수를 늘린 모습, 가져다가 되면 구체적으로 정보가 나옵니다.
-
-위의 `DEFAULT`로 나와있는 부분은 출력형식을 지정하는 것입니다. 
-파드는 네임스페이스에 따라 구분됩니다.
-
-![](https://velog.velcdn.com/images/han-0315/post/ddf4ee4b-a9d7-411e-87ff-53d5e2833810/image.png)
-
-
-## 스토리지
-
-이제 이번주차의 핵심인 스터리지에 대해서 실습을 진행합니다. 파드 내부의 데이터는 파드와 생명주기가 동일하여 파드가 삭제되면 데이터도 사라집니다. 만약, DB 애플리케이션과 같은 경우 데이터는 보존이 필요합니다. 이럴 경우  persistent volume 을 연결하여 사용합니다. 
-
-PV와 PVC에 대한 내용은 [AWS Blog](https://aws.amazon.com/ko/blogs/tech/persistent-storage-for-kubernetes/) 문서를 참고했습니다.
-
-Persistent Volume(PV)은 실제 스토리지 볼륨을 나타냅니다. 쿠버네티스는 PV 위에 추가 추상화 계층인 PersistentVolumeClaim(PVC)을 가지고 있습니다. 구분하는 이유는 아래의 문서에서 확인할 수 있습니다. 
-
-> PV와 PVC의 구분은 Kubernetes 환경에서 두 가지 유형의 사용자가 있다는 개념과 관련이 있습니다.
-> 
-> - **Kubernetes 관리자**: 이 사용자는 클러스터를 유지 관리하고 운영하며 영구 스토리지와 같은 계산 리소스를 추가합니다.
-> - **Kubernetes 애플리케이션** **개발자**: 이 사용자는 애플리케이션을 개발하고 배포합니다.
-
-CSI는 Container Storage Interface로 다양한 스토리지 솔류션에 대한 인터페이스입니다. CSI를 통해 다음과 같은 2가지 방법으로 스토리지를 연결할 수 있습니다.
-
-**정적** **프로비저닝(Static provisioning)**
-먼저 관리자가 하나 이상의 PV를 생성하고 애플리케이션 개발자는 PVC를 생성합니다.
-**동적** **프로비저닝(Dynamic provisioning)**
-동적 프로비저닝을 사용하면 PV객체를 생성할 필요가 없습니다. 대신에, PVC를 생성할 때 내부적으로 자동으로 생성됩니다. Kubernetes는 Storage Class라는 다른 객체를 사용하여 이를 수행합니다.
-
-- volume 방식
+## Volume 유형
+방식은 아래의 그림과 같이 3가지가 있다 
 ![](https://velog.velcdn.com/images/han-0315/post/fad0c72d-a552-4546-b340-212977855671/image.png)
 
-방식은 위의 그림과 같이 3가지가 있습니다. 첫번째 방식은 파드의 생명주기와 데이터의 생명주기가 같습니다. 데이터를 보존해야할 경우 2~3번째 방식을 이용해야 합니다. 2번째 방식은 아래의 local-path에서 설명할 예정입니다.
+첫번째 방식은 컨테이너의 임시 저장소로, 파드의 생명주기와 데이터의 생명주기가 같다. 임시로 쓰기에는 좋으나 만약 데이터를 보존해야할 경우 2~3번째 방식을 이용해야 한다. 
+
+2,3번째 방식은 아래에서 실습을 하며 자세하게 설명할 예정이다.
+### CSI 프로비저닝 유형
+CSI는 Container Storage Interface로 다양한 스토리지 솔류션에 대한 인터페이스이다. CSI를 통해 다음과 같은 2가지 방법으로 스토리지를 연결할 수 있다
+
+**정적** **프로비저닝(Static provisioning)**
+먼저 관리자가 하나 이상의 PV를 생성하고 애플리케이션 개발자는 PVC를 생성한다
+**동적** **프로비저닝(Dynamic provisioning)**
+동적 프로비저닝을 사용하면 PV객체를 생성할 필요가 없다 대신에, PVC를 생성할 때 내부적으로 자동으로 생성된다. Kubernetes는 Storage Class라는 다른 객체를 사용하여 이를 수행한다
 
 
+## EmptyDir    
+먼저, 가시다님의 이미지를 통해 파드의 생명주기와 데이터의 보존주기가 같은 것을 확인한 결과이다.
 
-### emptyDir    
-먼저, 가시다님의 이미지를 통해 파드의 생명주기와 데이터의 보존주기가 같은 것을 확인한 결과입니다.
-
+**[테스트를 위해 10초 마다 /home/pod-out.txt 에 로그를 남기는 파드 생성한다.]**
 ```bash
 $curl -s -O https://raw.githubusercontent.com/gasida/PKOS/main/3/date-busybox-pod.yaml
-# 10초 마다 /home/pod-out.txt 에 로그를 남기는 파드 생성
+
 $cat date-busybox-pod.yaml | yh
 apiVersion: v1
 kind: Pod
@@ -268,10 +234,14 @@ spec:
 
 $kubectl apply -f date-busybox-pod.yaml
 pod/busybox created
-# 로그 확인 
+
 $kubectl get pod
 NAME      READY   STATUS    RESTARTS   AGE
 busybox   1/1     Running   0          11s
+```
+**[파드의 로그를 확인한다.]**
+정상적으로 10초마다 로그를 남기고 있는 것을 확인할 수 있다.
+```bash
 kubectl exec busybox -- tail -f /home/pod-out.txt
 Sun May  7 15:26:19 UTC 2023
 Sun May  7 15:26:29 UTC 2023
@@ -280,7 +250,10 @@ $kubectl delete pod busybox
 pod "busybox" deleted
 $kubectl apply -f date-busybox-pod.yaml
 pod/busybox created
-# 삭제 후 실행하니, 기존의 로그는 사라진 것을 확인할 수 있음 -> 파드와 데이터의 생명주기가 같음을 확인
+```
+**[이제 파드를 삭제 후 재생성한다.]**
+삭제 후 실행하니, 기존의 로그는 사라진 것을 확인할 수 있다. 이를 통해 emptyDir 유형은 파드와 데이터의 생명주기가 같음을 확인
+```bash
 $kubectl exec busybox -- tail -f /home/pod-out.txt
 Sun May  7 15:26:45 UTC 2023
 Sun May  7 15:26:55 UTC 2023
@@ -291,12 +264,19 @@ $kubectl delete pod busybox
 pod "busybox" deleted
 ```
 
-### Local
+## Local
 
-HostPath는 Kubernetes 노드의 호스트 파일 시스템에 볼륨을 프로비저닝하는 방법입니다. 이것은 가장 간단한 방법이지만 제한적입니다. hostPath 볼륨은 단일 노드에서만 사용할 수 있으며 노드가 중단되면 데이터가 손실됩니다.
-Local Path는 노드의 로컬 파일 시스템에 볼륨을 프로비저닝하는 방법입니다. HostPath와 유사하지만 더 유연합니다. 프로비저닝 볼륨은 여러 노드에서 사용할 수 있으며 노드가 중단되어도 데이터가 손실되지 않습니다. local-path에 대한 자세한 내용은 [GitHub](https://github.com/rancher/local-path-provisioner)에서 확인할 수 있습니다.
-아래는 Local-Path 방식을 이용하는 PV,PVC에 대한 실습입니다. 
-local path 관련 백업은 한승호님이 Velero [blog](https://hanhorang31.github.io/post/pkos2-2-localstorage/)에 올려주셨다.
+HostPath는 Kubernetes 노드의 호스트 파일 시스템에 볼륨을 프로비저닝하는 방법이다. 이것은 데이터를 저장할 수 있는 가장 간단한 방법이지만 제한적이다. 
+
+HostPath 볼륨은 단일 노드에서만 사용할 수 있으며 **노드가 중단되면 데이터가 손실된다.** 
+Local Path는 인스턴스 스토어 볼륨을 프로비저닝하는 방법이다. 
+> Instance Store는 EC2와 물리적으로 연결되어있는 스토리지이며 다른 스토리지 서비스보다 IOPS 성능이 우수하다.
+
+그렇기에 여러 노드에서 사용할 수 있으며, 노드의 중단되어도 데이터가 손실되지 않는다. local-path에 대한 자세한 내용은 [GitHub](https://github.com/rancher/local-path-provisioner)에서 확인할 수 있다. local path 관련 백업은 한승호님이 Velero [blog](https://hanhorang31.github.io/post/pkos2-2-localstorage/)에 올려주셨다.
+
+아래는 Local-Path 방식을 이용하는 PV,PVC에 대한 실습이다. 
+
+**[Storage Class 배포]**
 ```bash
 # strage class 다운로드
 $curl -s -O https://raw.githubusercontent.com/rancher/local-path-provisioner/master/deploy/local-path-storage.yaml
@@ -316,7 +296,8 @@ NAME            PROVISIONER             RECLAIMPOLICY   VOLUMEBINDINGMODE      A
 local-path      rancher.io/local-path   Delete          WaitForFirstConsumer   false                  25s
 
 ```
-Local Path를 통한 동적 프로비저닝에 대한 실습내용입니다.
+
+**[Local Path 방식을 이용해 동적프로비저닝한다.]**
 
 ```bash
 $cat localpath1.yaml | yh
@@ -354,7 +335,8 @@ persistentvolume/pvc-88293146-ce9b-4dd0-b473-1ceb489301f3   1Gi        RWO      
 NAME                                    STATUS   VOLUME                                     CAPACITY   ACCESS MODES   STORAGECLASS   AGE
 persistentvolumeclaim/localpath-claim   Bound    pvc-88293146-ce9b-4dd0-b473-1ceb489301f3   1Gi        RWO            local-path     48s
 ```
-위의 내용을 통해 동적프로비저닝을 확인했습니다. 현재와 같은 방식은 노드의 볼륨을 사용하기에, PV는 파드가 존재하는 노드에 생성됩니다. 
+위의 내용을 통해 동적프로비저닝을 확인했다.  현재와 같은 방식은 노드의 볼륨을 사용하기에, PV는 파드가 존재하는 노드에 생성된다. 
+**[PV와 파드가 동일한 노드에 생성되었는지 확인해본다.]**
 ```bash
 $kubectl describe pv    # Node Affinity 확인 -> 자신의 워커노드에서만 생성하도록
 Name:              pvc-88293146-ce9b-4dd0-b473-1ceb489301f3
@@ -382,8 +364,10 @@ Sun May 7 15:30:57 UTC 2023
 Sun May 7 15:31:02 UTC 2023
 Sun May 7 15:31:07 UTC 2023
 Sun May 7 15:31:12 UTC 2023
+```
 
-# 파드 삭제 
+**[파드를 삭제 후 재생성하여 생명주기가 다른지 확인한다.]** 
+```bash
 $kubectl delete pod app
 pod "app" deleted
 
@@ -427,13 +411,23 @@ $ssh ec2-user@$N2 tree /opt/local-path-provisioner
 0 directories, 0 files
 ```
 
+## PV/PVC
+Persistent Volume(PV)은 실제 스토리지 볼륨을 나타냅니다. 쿠버네티스는 PV 위에 추가 추상화 계층인 PersistentVolumeClaim(PVC)을 가지고 있다 구분하는 이유는 아래의 문서에서 확인할 수 있다 
+
+> PV와 PVC의 구분은 Kubernetes 환경에서 두 가지 유형의 사용자가 있다는 개념과 관련이 있다
+> 
+> - **Kubernetes 관리자**: 이 사용자는 클러스터를 유지 관리하고 운영하며 영구 스토리지와 같은 계산 리소스를 추가한다
+> - **Kubernetes 애플리케이션** **개발자**: 이 사용자는 애플리케이션을 개발하고 배포한다
+PV와 PVC에 대한 내용은 [AWS Blog](https://aws.amazon.com/ko/blogs/tech/persistent-storage-for-kubernetes/) 문서를 참고했다
+
+
+이제 아래의 실습에서는 AWS 스토리지 서비스(EBS, EFS)를 PV, PVC로 사용하는 방법을 알아본다.
 
 ### AWS EBS Controller
 
-EBS-CSI를 사용하기 위한 절차입니다.
-EBS는 동적 프로비저닝이 가능하기에, PVC 와 파드를 생성하면 자동적으로 PV가 할당됩니다.
+EBS-CSI를 사용하기 위한 절차이다. 컨트롤러를 통해 쉽게 EBS를 사용할 수 있다. EBS는 동적 프로비저닝이 가능하기에, PVC 와 파드를 생성하면 자동적으로 PV가 할당된다.
 
-1. ISRA 설정 : AWS관리형 정책 AmazonEBSCSIDriverPolicy 사용
+1. ISRA 설정 : AWS관리형 정책 **AmazonEBSCSIDriverPolicy** 사용
 2. add-on 추가: `eksctl` 이용
     
     `eksctl create addon --name aws-ebs-csi-driver --cluster ${CLUSTER_NAME} --service-account-role-arn arn:aws:iam::${ACCOUNT_ID}:role/AmazonEKS_EBS_CSI_DriverRole --force`
@@ -471,8 +465,11 @@ aws-ebs-csi-driver	v1.18.0-eksbuild.1	CREATING	0	arn:aws:iam::871103481195:role/
 $k get sa -n kube-system | grep ebs
 ebs-csi-controller-sa                0         33s
 ebs-csi-node-sa                      0         33s
+```
+EBS 컨트롤러 설치를 완료했다. 이제 EBS를 사용하기 위한 StorageClass를 배포한다.
 
-# 스토리지 클래스 배포
+**[스토리지 클래스 배포]**
+```bash
 cat <<EOT > gp3-sc.yaml
 > kind: StorageClass
 > apiVersion: storage.k8s.io/v1
@@ -504,7 +501,7 @@ gp3             ebs.csi.aws.com         Delete          WaitForFirstConsumer   t
 
 ```
 
-**PV와 PVC, 파드를 생성하여 동적 프로비저닝을 확인하는 과정입니다.**
+**PVC, 파드를 생성하여 동적 프로비저닝을 확인하는 과정이다.**
 
 ```bash
 $cat <<EOT > awsebs-pvc.yaml
@@ -630,12 +627,14 @@ $aws ec2 describe-volumes --volume-ids $(kubectl get pv -o jsonpath="{.items[0].
   ]
 }
 ```
-PersistentVolumeClaim을 생성할 때, AWS EBS는 다중연결이 가능하기에 access모드를 ReadWriteOnce로 설정해야 합니다. EBS의 다중 연결은 GlusterFS와 같은 공유 볼륨을 사용하는 경우와 유사합니다. 
-> `EBS의 다중 연결을 사용하면 특정 볼륨을 여러 대의 EC2 인스턴스에 연결할 수 있습니다. 각 EBS 볼륨은 Multi-Attach 설정시 해당 볼륨이 위치한 가용영역에서 최대 16개의 EC2에 연결할 수 있게 됩니다.`
+Io2 Type의 EBS라면 여러 개의 인스턴스에 연결할 수 있다. 단 같은 AZ에 존재해야 한다. 
+> `EBS의 다중 연결을 사용하면 특정 볼륨을 여러 대의 EC2 인스턴스에 연결할 수 있다 각 EBS 볼륨은 Multi-Attach 설정시 해당 볼륨이 위치한 가용영역에서 최대 16개의 EC2에 연결할 수 있게 된다.`
 
-또한, EBS는 같은 AZ에 있어야 접근이 가능하므로 nodeaffinity를 통해 같은 AZ로 PV를 생성합니다.
+이런 경우에는 PersistentVolumeClaim을 생성할 때, AWS EBS는 다중연결이 가능하기에 access모드를 ReadWriteOnce로 설정해야 한다 EBS의 다중 연결은 GlusterFS와 같은 공유 볼륨을 사용하는 경우와 유사한다 
 
-**아래는 EBS 볼륨을 확장하는 실습입니다.**
+또한, EBS는 같은 AZ에 있어야 접근이 가능하므로 **nodeaffinity**를 통해 같은 AZ로 PV를 생성한다
+
+**[아래는 EBS 볼륨을 확장하는 실습이다.]**
 ```bash
 $kubectl exec app -- tail -f /data/out.txt
 Thu May 11 00:48:40 UTC 2023
@@ -679,7 +678,7 @@ persistentvolumeclaim "ebs-claim" deleted
 
 ### AWS Volume SnapShots Controller
 
-아래는 위와 동일하게, PVC, PV를 생성해서 파드와 연결합니다. 파드는  `data -u` 로그를 남기며 강제로 파드와 PVC를 삭제한 후,  snapshots을 통해 복구하는 실습을 진행합니다.
+아래는 위와 동일하게, PVC, PV를 생성해서 파드와 연결한다 파드는  `data -u` 로그를 남기며 강제로 파드와 PVC를 삭제한 후,  snapshots을 통해 복구하는 실습을 진행한다
 
 **snapshot 생성**
 
@@ -706,7 +705,7 @@ Metadata:
   UID:               ff3a9b11-d8a5-4806-80eb-9c062c4062ad
 Spec:
   Source:
-    Persistent Volume Claim Name:  ebs-claim
+    Persistent VolumeClaim Name:  ebs-claim
   Volume Snapshot Class Name:      csi-aws-vsc
 Status:
   Bound Volume Snapshot Content Name:  snapcontent-ff3a9b11-d8a5-4806-80eb-9c062c4062ad
@@ -724,7 +723,9 @@ Events:
 $kubectl get volumesnapshotcontents
 NAME                                               READYTOUSE   RESTORESIZE   DELETIONPOLICY   DRIVER            VOLUMESNAPSHOTCLASS   VOLUMESNAPSHOT        VOLUMESNAPSHOTNAMESPACE   AGE
 snapcontent-ff3a9b11-d8a5-4806-80eb-9c062c4062ad   false        4294967296    Delete           ebs.csi.aws.com   csi-aws-vsc           ebs-volume-snapshot   default                   38s
-
+```
+**[스냅샷을 통한 복구를 진행하기 위해 파드와 PVC를 제거한다.]**
+```bash
 # 파드와 pvc를 제거하여, pv가 제거된 모습
 $kubectl delete pod app && kubectl delete pvc ebs-claim
 pod "app" deleted
@@ -732,7 +733,9 @@ persistentvolumeclaim "ebs-claim" deleted
 
 $kubectl get pvc,pv
 No resources found
-
+```
+**[이제 volumesnapshot을 통해 복구를 진행한다.]**
+```bash
 $k get volumesnapshot
 NAME                  READYTOUSE   SOURCEPVC   SOURCESNAPSHOTCONTENT   RESTORESIZE   SNAPSHOTCLASS   SNAPSHOTCONTENT                                    CREATIONTIME   AGE
 ebs-volume-snapshot   true         ebs-claim                           4Gi           csi-aws-vsc     snapcontent-ff3a9b11-d8a5-4806-80eb-9c062c4062ad   7m13s          7m13s
@@ -782,7 +785,9 @@ spec:
   - name: persistent-storage
     persistentVolumeClaim:
       claimName: ebs-snapshot-restored-claim
-
+```
+**[파드를 다시 생성하고 로그를 확인한다. 로그가 이어지는 것을 확인할 수 있다.]**
+```bash
 $kubectl apply -f ebs-snapshot-restored-pod.yaml
 pod/app created
 
@@ -804,17 +809,17 @@ persistentvolumeclaim "ebs-snapshot-restored-claim" deleted
 volumesnapshot.snapshot.storage.k8s.io "ebs-volume-snapshot" deleted
 ```
 
-아래는 스냅샷을 AWS 콘솔을 통해 확인한 모습이다. 
+아래는 AWS 콘솔을 통해 EBS 스냅샷을 확인한 모습이다. 
 ![](https://velog.velcdn.com/images/han-0315/post/e36acb87-bd1a-4df7-843e-b1533dc07607/image.png)
 
 
 ### AWS EFS Controller
 
-먼저 EFS([Amazon Elastic File System](https://aws.amazon.com/efs/))는 그림과 같이 여러 가용영역과 호환가능한 파일시스템입니다.
+먼저 EFS([Amazon Elastic File System](https://aws.amazon.com/efs/))는 그림과 같이 여러 가용영역과 호환가능한 파일시스템이다.
 
-아래는 EFS를 통해 PV,PVC를 생성하는 실습내용입니다.
+아래는 EFS를 통해 PV,PVC를 생성하는 실습내용이다.
 
-먼저 작업용 EC2에도 efs mount를 진행합니다.
+먼저 작업용 EC2에도 efs mount를 진행한다
 
 ```bash
 $mount -t nfs4 -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,noresvport fs-0b2bc433bc72b5727.efs.ap-northeast-2.amazonaws.com:/ /mnt/myefs
@@ -855,21 +860,15 @@ $eksctl create iamserviceaccount \
 >   --approve
 2023-05-13 15:22:26 [ℹ]  created serviceaccount "kube-system/efs-csi-controller-sa"
 
-## 불필요
-$kubectl get sa -n kube-system efs-csi-controller-sa -o yaml | head -5
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::871103481195:role/eksctl-myeks-addon-iamserviceaccount-kube-sy-Role1-183ANMNPO7E68
-
+# EFS 컨트롤러를 확인한다.
 $eksctl get iamserviceaccount --cluster myeks
 NAMESPACE	NAME				ROLE ARN
 kube-system	aws-load-balancer-controller	arn:aws:iam::871103481195:role/eksctl-myeks-addon-iamserviceaccount-kube-sy-Role1-1OWZIVWLLX9JM
 kube-system	ebs-csi-controller-sa		arn:aws:iam::871103481195:role/AmazonEKS_EBS_CSI_DriverRole
 kube-system	efs-csi-controller-sa		arn:aws:iam::871103481195:role/eksctl-myeks-addon-iamserviceaccount-kube-sy-Role1-183ANMNPO7E68
-
-#efs 구성요소를 helm을 통해 배포
+```
+**[efs 구성요소를 helm을 통해 배포]**
+```bash
 $helm repo add aws-efs-csi-driver https://kubernetes-sigs.github.io/aws-efs-csi-driver/
 "aws-efs-csi-driver" has been added to your repositories
 $helm repo update
@@ -904,8 +903,9 @@ efs-csi-node-xtvvm                    0/3     ContainerCreating   0          9s
 efs-csi-node-zvzcs                    0/3     ContainerCreating   0          9s
 ```
 
-이제 K8S에서 제공해준 샘플 코드를 다운받아, 실습을 진행합니다.
+**[이제 K8S에서 제공해준 샘플 코드를 다운받아, 실습을 진행한다.]**
 
+ 정적 프로비저닝 방식이라 위의 EBS와는 다르다.
 ```bash
 $git clone https://github.com/kubernetes-sigs/aws-efs- qq-driver.git /root/efs-csiCloning into '/root/efs-csi'...
 remote: Enumerating objects: 16052, done.
@@ -962,7 +962,12 @@ spec:
   csi:
     driver: efs.csi.aws.com
     volumeHandle: fs-0f70f92a10cc5af1a
-# 정적 프로비저닝이라 pv를 먼저 생성하는 모습
+```
+#### EFS 정적 프로비저닝
+**[정적 프로비저닝방식으로 PV, PVC 생성]**
+
+정적 프로비저닝이기에 PV를 먼저 생성한다.
+```bash
 $kubectl apply -f pv.yaml
 persistentvolume/efs-pv created
 
@@ -985,8 +990,10 @@ persistentvolumeclaim/efs-claim created
 $k get pv
 NAME     CAPACITY   ACCESS MODES   RECLAIM POLICY   STATUS   CLAIM               STORAGECLASS   REASON   AGE
 efs-pv   5Gi        RWX            Retain           Bound    default/efs-claim   efs-sc                  57s
+```
 
-# 이전과 유사한 data -u 로그를 찍는 파드를 2개 생성
+**[이전과 유사한 data -u 로그를 찍는 파드를 2개 생성]**
+```bash
 $kubectl apply -f pod1.yaml,pod2.yaml
 pod/app1 created
 pod/app2 created
@@ -1023,7 +1030,9 @@ metadata:
   - name: persistent-storage
     persistentVolumeClaim:
       claimName: efs-claim
-
+```
+**[EFS 특징, 여러 AZ에 공유되는 것을 확인한다.]**
+```bash
 $k exec -it app1 -- sh -c "df -hT -t nfs4"
 Filesystem           Type            Size      Used Available Use% Mounted on
 127.0.0.1:/          nfs4            8.0E         0      8.0E   0% /data
@@ -1045,53 +1054,16 @@ persistentvolumeclaim "efs-claim" deleted
 persistentvolume "efs-pv" deleted
 storageclass.storage.k8s.io "efs-sc" deleted
 ```
-아래는 EFS의 네트워크 모습입니다. 현재 노드가 있는 3개의 가용영역이 모두 있는 것을 확인할 수 있습니다.
+아래는 EFS의 네트워크 모습이다. 현재 노드가 있는 3개의 가용영역이 모두 있는 것을 확인할 수 있다
 ![](https://velog.velcdn.com/images/han-0315/post/cba5e06e-1ef5-4d6c-8ea9-86861b47675d/image.png)
 
 
-위에서는 정적 프로비저닝으로 테스트를 진행했지만, EFS에는 동적 프로비저닝 기능이 `1.2` 버전부터 지원하여 동적 프로비저닝도 진행해봤다. 위의 내용에서 동적프로비저닝을 테스트하면 다음과 같이 자동으로 PV가 할당되지 않아 PVC와 파드가 생성되지 못한다.
 
-```bash
-# 모니터링 
-Every 2.0s: kubectl get sc efs-sc; echo; kubectl get pv,pvc,pod                                            Sat May 13 16:30:46 2023
-
-NAME     PROVISIONER	   RECLAIMPOLICY   VOLUMEBINDINGMODE   ALLOWVOLUMEEXPANSION   AGE
-efs-sc   efs.csi.aws.com   Delete          Immediate           false                  10m
-
-NAME                              STATUS    VOLUME   CAPACITY   ACCESS MODES   STORAGECLASS   AGE
-persistentvolumeclaim/efs-claim   Pending                                      efs-sc         42s
-
-NAME	   READY   STATUS    RESTARTS   AGE
-pod/app1   0/1     Pending   0          33s
-pod/app2   0/1     Pending   0          33s
-```
-
-파드의 로그
-
-```bash
-Events:
-  Type     Reason            Age                 From               Message
-  ----     ------            ----                ----               -------
-  Warning  FailedScheduling  15s (x4 over 100s)  default-scheduler  0/3 nodes are available: 3 pod has unbound immediate PersistentVolumeClaims. preemption: 0/3 nodes are available: 3 Preemption is not helpful for scheduling.
-  Normal   Scheduled         7s                  default-scheduler  Successfully assigned default/app1 to ip-192-168-2-52.ap-northeast-2.compute.internal
-```
-
-PVC 로그
-
-```bash
-Events:
-  Type     Reason                Age                  From                                                                                                   Message
-  ----     ------                ----                 ----                                                                                                   -------
-  Normal   Provisioning          96s (x7 over 2m39s)  efs.csi.aws.com_ip-192-168-3-190.ap-northeast-2.compute.internal_d0fa0b24-c916-44ba-befc-922b6eb49470  External provisioner is provisioning volume for claim "default/efs-claim"
-  Warning  ProvisioningFailed    96s (x7 over 2m39s)  efs.csi.aws.com_ip-192-168-3-190.ap-northeast-2.compute.internal_d0fa0b24-c916-44ba-befc-922b6eb49470  failed to provision volume with StorageClass "efs-sc": rpc error: code = InvalidArgument desc = Missing provisioningMode parameter
-  Normal   Provisioning          96s (x7 over 2m39s)  efs.csi.aws.com_ip-192-168-1-203.ap-northeast-2.compute.internal_74db5f2e-b1e1-4f54-b9b2-cede890dddf7  External provisioner is provisioning volume for claim "default/efs-claim"
-  Warning  ProvisioningFailed    96s (x7 over 2m39s)  efs.csi.aws.com_ip-192-168-1-203.ap-northeast-2.compute.internal_74db5f2e-b1e1-4f54-b9b2-cede890dddf7  failed to provision volume with StorageClass "efs-sc": rpc error: code = InvalidArgument desc = Missing provisioningMode parameter
-  Normal   ExternalProvisioning  80s (x8 over 2m39s)  persistentvolume-controller                                                                            waiting for a volume to be created, either by external provisioner "efs.csi.aws.com" or manually created by system administrator
-```
 
 #### EFS 동적 프로비저닝
+위에서는 정적 프로비저닝으로 테스트를 진행했지만, EFS에는 동적 프로비저닝 기능이 `1.2` 버전부터 지원하여 동적 프로비저닝도 진행해봤다. 위의 내용에서 동적프로비저닝을 테스트하면 다음과 같이 자동으로 PV가 할당되지 않아 PVC와 파드가 생성되지 못한다. 
 
-EFS에 대한 동적프로비저닝에 대한 설명은 [AWS Blog](https://aws.amazon.com/blogs/containers/introducing-efs-csi-dynamic-provisioning/)과 [GitHub](https://github.com/kubernetes-sigs/aws-efs-csi-driver/blob/master/examples/kubernetes/dynamic_provisioning/specs/storageclass.yaml)에서 자세하게 확인할 수 있습니다.
+EFS에 대한 동적프로비저닝에 대한 설명은 [AWS Blog](https://aws.amazon.com/blogs/containers/introducing-efs-csi-dynamic-provisioning/)과 [GitHub](https://github.com/kubernetes-sigs/aws-efs-csi-driver/blob/master/examples/kubernetes/dynamic_provisioning/specs/storageclass.yaml)에서 자세하게 확인할 수 있다
 
 다른 과정은 앞에서와 똑같고, 스토리지 클래스와 파드만 달라진다.
 
@@ -1139,39 +1111,41 @@ spec:
         claimName: efs-claim
 ```
 
-이유를 모르겠으나, 동적프로비저닝은 오류가 발생했다. 문서 그대로 진행하고, 오류를 찾아봤으나 아직 해결하지 못했다.
-
 ```bash
-Every 2.0s: kubectl get sc efs-sc; echo; kubectl get pv,pvc,pod                                            Sat May 13 22:45:27 2023
+# 모니터링 
+Every 2.0s: kubectl get sc efs-sc; echo; kubectl get pv,pvc,pod                                            Sat May 13 16:30:46 2023
 
-NAME     PROVISIONER       RECLAIMPOLICY   VOLUMEBINDINGMODE   ALLOWVOLUMEEXPANSION   AGE
-efs-sc   efs.csi.aws.com   Delete          Immediate           false                  7m39s
+NAME     PROVISIONER	   RECLAIMPOLICY   VOLUMEBINDINGMODE   ALLOWVOLUMEEXPANSION   AGE
+efs-sc   efs.csi.aws.com   Delete          Immediate           false                  10m
 
 NAME                              STATUS    VOLUME   CAPACITY   ACCESS MODES   STORAGECLASS   AGE
-persistentvolumeclaim/efs-claim   Pending                                      efs-sc         7m18s
+persistentvolumeclaim/efs-claim   Pending                                      efs-sc         42s
 
-NAME          READY   STATUS    RESTARTS   AGE
-pod/efs-app   0/1     Pending   0          7m18s
+NAME	   READY   STATUS    RESTARTS   AGE
+pod/app1   0/1     Pending   0          33s
+pod/app2   0/1     Pending   0          33s
 ```
 
-PVC에서 발생한 로그
-
-```css
-Warning  ProvisioningFailed  26s                efs.csi.aws.com_ip-192-168-3-97.ap-northeast-2.compute.internal_6f23dce4-74d1-4453-b25c-013fcb47be73  failed to provision volume with StorageClass "efs-sc": rpc error: code = Internal desc = Failed to fetch File System info: Describe File System failed: WebIdentityErr: failed to retrieve credentials
-caused by: AccessDenied: Not authorized to perform sts:AssumeRoleWithWebIdentity
-          status code: 403, request id: 92132222-c11b-4a7c-b546-ddf80b933c1c
-  Normal  ExternalProvisioning  14s (x5 over 57s)  persistentvolume-controller  waiting for a volume to be created, either by external provisioner "efs.csi.aws.com" or manually created by system administrator
-```
-
-### 기타
-
-추가적으로 실습을 진행하다가, 에러가 났던 부분입니다.
-아래와 같이 PV 삭제할 때, terminating 단계에서 멈추며 진행이 안된 적이 있다. 관련 자료를 찾아보니 파이널라이저에 의해 삭제가 안되는 것을 알 수 있었다.
+**[파드의 로그]**
 
 ```bash
-k get pv
-NAME                                       CAPACITY   ACCESS MODES   RECLAIM POLICY   STATUS        CLAIM               STORAGECLASS   REASON   AGE
-efs-pv                                     5Gi        RWX            Retain           Available                         efs-sc                  3m49s
-pvc-5f762d6c-aff6-4a3a-8ff4-e947563c792a   5Gi        RWX            Delete           Terminating   default/efs-claim   efs-sc                  27m
+Events:
+  Type     Reason            Age                 From               Message
+  ----     ------            ----                ----               -------
+  Warning  FailedScheduling  15s (x4 over 100s)  default-scheduler  0/3 nodes are available: 3 pod has unbound immediate PersistentVolumeClaims. preemption: 0/3 nodes are available: 3 Preemption is not helpful for scheduling.
+  Normal   Scheduled         7s                  default-scheduler  Successfully assigned default/app1 to ip-192-168-2-52.ap-northeast-2.compute.internal
+```
+
+**[PVC 로그]**
+
+```bash
+Events:
+  Type     Reason                Age                  From                                                                                                   Message
+  ----     ------                ----                 ----                                                                                                   -------
+  Normal   Provisioning          96s (x7 over 2m39s)  efs.csi.aws.com_ip-192-168-3-190.ap-northeast-2.compute.internal_d0fa0b24-c916-44ba-befc-922b6eb49470  External provisioner is provisioning volume for claim "default/efs-claim"
+  Warning  ProvisioningFailed    96s (x7 over 2m39s)  efs.csi.aws.com_ip-192-168-3-190.ap-northeast-2.compute.internal_d0fa0b24-c916-44ba-befc-922b6eb49470  failed to provision volume with StorageClass "efs-sc": rpc error: code = InvalidArgument desc = Missing provisioningMode parameter
+  Normal   Provisioning          96s (x7 over 2m39s)  efs.csi.aws.com_ip-192-168-1-203.ap-northeast-2.compute.internal_74db5f2e-b1e1-4f54-b9b2-cede890dddf7  External provisioner is provisioning volume for claim "default/efs-claim"
+  Warning  ProvisioningFailed    96s (x7 over 2m39s)  efs.csi.aws.com_ip-192-168-1-203.ap-northeast-2.compute.internal_74db5f2e-b1e1-4f54-b9b2-cede890dddf7  failed to provision volume with StorageClass "efs-sc": rpc error: code = InvalidArgument desc = Missing provisioningMode parameter
+  Normal   ExternalProvisioning  80s (x8 over 2m39s)  persistentvolume-controller                                                                            waiting for a volume to be created, either by external provisioner "efs.csi.aws.com" or manually created by system administrator
 ```
 
