--- a/_posts/2024-03-12-깃허브 블로그와 노션 연동하기 [인프라].md
+++ b/_posts/2024-03-12-깃허브 블로그와 노션 연동하기 [인프라].md
@@ -28,7 +28,7 @@ mermaid: true
 [깃허브 블로그와 노션 연동하기 [결과]](https://www.handongbee.com/posts/%EA%B9%83%ED%97%88%EB%B8%8C-%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%99%80-%EB%85%B8%EC%85%98-%EC%97%B0%EB%8F%99%ED%95%98%EA%B8%B0-%EA%B2%B0%EA%B3%BC/)
 
 
-## 깃허브 블로그와 노션 연동하기 #인프라
+## 깃허브 블로그와 노션 연동하기 [인프라]
 
 
 이번 편에서는 인프라 구조에 대해 자세하게 설명한다. 인프라는 클라우드 기반으로 설계되었다. 마침 AWS 크레딧이 있었기에 Amazon Web Services(AWS)를 이용했다. 
