code 및 파일 정리

--- a/_posts/2023-11-15-Cpp정리.md
+++ b/_posts/2023-11-15-Cpp정리.md
@@ -93,13 +93,13 @@ bool operator>(const Entry &lhs, const Entry &rhs) {
 
 - 비트연산자
 
-| `&`  | 대응되는 비트가 모두 1이면 1을 반환함. (비트 AND 연산)                   |
-| ---- | ----------------------------------------------------- |
-| `|`  | 대응되는 비트 중에서 하나라도 1이면 1을 반환함. (비트 OR 연산)               |
-| `^`  | 대응되는 비트가 서로 다르면 1을 반환함. (비트 XOR 연산)                   |
-| `~`  | 비트를 1이면 0으로, 0이면 1로 반전시킴. (비트 NOT 연산, 1의 보수)          |
-| `<<` | 지정한 수만큼 비트들을 전부 왼쪽으로 이동시킴. (left shift 연산)            |
-| `>>` | 부호를 유지하면서 지정한 수만큼 비트를 전부 오른쪽으로 이동시킴. (right shift 연산) |
+| &   | 대응되는 비트가 모두 1이면 1을 반환함. (비트 AND 연산)                              |
+| --- | ----------------------------------------------------------------------------------- |
+|     |                                                                                     | 대응되는 비트 중에서 하나라도 1이면 1을 반환함. (비트 OR 연산) |
+| ^   | 대응되는 비트가 서로 다르면 1을 반환함. (비트 XOR 연산)                             |
+| ~   | 비트를 1이면 0으로, 0이면 1로 반전시킴. (비트 NOT 연산, 1의 보수)                   |
+| <<  | 지정한 수만큼 비트들을 전부 왼쪽으로 이동시킴. (left shift 연산)                    |
+| >>  | 부호를 유지하면서 지정한 수만큼 비트를 전부 오른쪽으로 이동시킴. (right shift 연산) |
 
 - 삼항연산자(조건식 ? 반환값1 : 반환값2)
 - 포인터 연산자
@@ -290,11 +290,12 @@ ex) `0x12345678`
 리틀 엔디안 방식은 낮은 주소에 데이터의 낮은 바이트(LSB : Least Significant Byte)를 저장하는 방식이다. 이 방식은 평소 사람이 숫자를 사용하는 선형 방식과 반대로 거꾸로 읽어야 한다.
 
 
-![Untitled.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/3b953ad7-a4bc-4b8b-877c-db94279d5db4/e4d5cc11-1c68-4aca-8214-0e94cd8b6641/Untitled.png)
+![Untitled.png](/assets/img/post/Cpp정리/Untitled.png)
 
 
-[출처: 위키피디아, [https://ko.wikipedia.org/wiki/엔디언](https://ko.wikipedia.org/wiki/%EC%97%94%EB%94%94%EC%96%B8)]
-
+<p align="center">
+[출처: 위키피디아, https://ko.wikipedia.org/wiki/%EC%97%94%EB%94%94%EC%96%B8]
+</p>
 
 ### 상속
 
