--- a/_posts/2024-01-10-파드 네트워크 이해하기.md
+++ b/_posts/2024-01-10-파드 네트워크 이해하기.md
@@ -185,8 +185,9 @@ pod "test" deleted
 ![aws](/assets/img/post/파드%20네트워크%20이해하기/1.webp)
 
 
-[출처: [https://medium.com/finda-tech/kubernetes-네트워크-정리-fccd4fd0ae6](https://medium.com/finda-tech/kubernetes-%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC-%EC%A0%95%EB%A6%AC-fccd4fd0ae6)]
-
+<p align="center">
+[출처: https://medium.com/finda-tech/kubernetes-%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC-%EC%A0%95%EB%A6%AC-fccd4fd0ae6]
+</p>
 
 ### 네트워크 구성 확인
 
@@ -371,8 +372,9 @@ pod "pod2" deleted
 
 
 ![](/assets/img/post/파드%20네트워크%20이해하기/2.webp)
+<p align="center">
 [출처: https://www.sobyte.net/post/2023-02/k8s-openshift/]
-
+</p>
 이제 실습을 통해, 위의 내용을 확인한다.
 
 
