--- a/_posts/2024-01-12-서비스 네트워크 모델 이해하기.md
+++ b/_posts/2024-01-12-서비스 네트워크 모델 이해하기.md
@@ -51,9 +51,9 @@ mermaid: true
 
 ![](/assets/img/post/서비스%20네트워크%20모델%20이해하기/1.webp)
 
-
-[출처: [https://en.m.wikipedia.org/wiki/File:Netfilter-packet-flow.svg](https://en.m.wikipedia.org/wiki/File:Netfilter-packet-flow.svg)]
-
+<p align="center">
+[출처: https://en.m.wikipedia.org/wiki/File:Netfilter-packet-flow.svg]
+</p>
 
 이제 앞으로 분석할 내용을 제대로 파악하려면, Iptables을 자세히 알아야 한다.
 
