오탈자 수정

--- a/_posts/2023-11-15-Cpp정리.md
+++ b/_posts/2023-11-15-Cpp정리.md
@@ -93,13 +93,16 @@ bool operator>(const Entry &lhs, const Entry &rhs) {
 
 - 비트연산자
 
-| &   | 대응되는 비트가 모두 1이면 1을 반환함. (비트 AND 연산)                              |
-| --- | ----------------------------------------------------------------------------------- |
-|     |                                                                                     | 대응되는 비트 중에서 하나라도 1이면 1을 반환함. (비트 OR 연산) |
-| ^   | 대응되는 비트가 서로 다르면 1을 반환함. (비트 XOR 연산)                             |
-| ~   | 비트를 1이면 0으로, 0이면 1로 반전시킴. (비트 NOT 연산, 1의 보수)                   |
-| <<  | 지정한 수만큼 비트들을 전부 왼쪽으로 이동시킴. (left shift 연산)                    |
-| >>  | 부호를 유지하면서 지정한 수만큼 비트를 전부 오른쪽으로 이동시킴. (right shift 연산) |
+| 연산자 | 설명                                                                                |
+| ------ | ----------------------------------------------------------------------------------- |
+| `&`    | 대응되는 비트가 모두 1이면 1을 반환함. (비트 AND 연산)                              |
+| `^`    | 대응되는 비트가 서로 다르면 1을 반환함. (비트 XOR 연산)                             |
+| `~`    | 비트를 1이면 0으로, 0이면 1로 반전시킴. (비트 NOT 연산, 1의 보수)                   |
+| `<<`   | 지정한 수만큼 비트들을 전부 왼쪽으로 이동시킴. (left shift 연산)                    |
+| `>>`   | 부호를 유지하면서 지정한 수만큼 비트를 전부 오른쪽으로 이동시킴. (right shift 연산) |
+
+`|` : 대응되는 비트 중에서 하나라도 1이면 1을 반환함. (비트 OR 연산) 
+
 
 - 삼항연산자(조건식 ? 반환값1 : 반환값2)
 - 포인터 연산자
@@ -300,7 +303,7 @@ ex) `0x12345678`
 ### 상속
 
 
-**#### 접근제어**
+#### 접근제어
 
 
 클래스안에 접근 제어 방식은 public, private, protected 3가지가 있다. 
@@ -312,7 +315,7 @@ ex) `0x12345678`
 	- friend 클래스는 friend로 선언된 다른 클래스의 private 및 protected 멤버에 접근할 수 있다.
 	- friend 함수는 private 및 protected 멤버에 접근할 수 있는 권한을 부여할 수 있다.
 
-**#### 오버로딩과 오버라이딩**
+#### 오버로딩과 오버라이딩
 
 
 오버라이딩은 동적으로 실제 그 객체의 타입에 맞는 함수를 실행하는 것이고, 오버로딩은 정적으로 매개변수에 맞는 함수를 선택하여 실행하는 것이다.
