--- a/_posts/2023-11-20-양과 늑대.md
+++ b/_posts/2023-11-20-양과 늑대.md
@@ -98,7 +98,7 @@ int solution(vector<int> info, vector<vector<int>> edges) {
 ## 배운점
 
 
-처음에 중복된 연산(노드의 방문)을 줄이려고 우선순위큐를 썼으나, `dp[x] x 노드를 방문했을 때, 양의 수의 최댓값` 으로 연산을 줄이는 것은 위험한 것 같다. (x 노드를 방문했을 때, dp[x]보다 양의수가 적다해서 문제가 정답이 아니라고 확정을 짓지못하겠다.)
+처음에 중복된 연산(노드의 방문)을 줄이려고 우선순위큐를 썼으나, `dp[x] = x 노드를 방문했을 때, 양의 수의 최댓값` 으로 연산을 줄이는 것은 위험하다. (x 노드를 방문했을 때, dp[x]보다 양의수가 적다해서 문제가 정답이라고 보장할 수 없다.)
 
 
 다른 사람들의 코드를 보니, 나처럼 vector 형식으로 리스트를 관리하는 것이 아닌 비트마스킹으로 리스트를 관리하는 것 같다.
