--- a/_posts/2023-11-23-괄호 변환.md
+++ b/_posts/2023-11-23-괄호 변환.md
@@ -56,7 +56,7 @@ mermaid: true
 ## 해결과정
 
 
-길이가 1,000이므로 $O(S^3)$이어도 넉넉하게 풀 수 있다. 해당 문제는 구체적으로 어떻게 해야하는지 서술되어있어서, 구현했다.
+길이가 1,000이므로 $O(S^3)$이어도 넉넉하게 풀 수 있다. 해당 문제는 구체적으로 어떻게 해야하는지 서술되어있어서, 그대로 구현했다.
 
 
 ## 소스코드
