--- a/_posts/2023-11-23-자물쇠와 열쇠.md
+++ b/_posts/2023-11-23-자물쇠와 열쇠.md
@@ -39,7 +39,7 @@ mermaid: true
 ## 해결과정
 
 
-이 문제 또한 완전탐색을 진행해도 회전하는 경우 4가지, 모든 이동 경우를 포함해도 O(4*M*M*N*N)이다. 즉, $64\times10^4$ 이므로 넉넉하게 해결할 수 있다.
+이 문제 또한 완전탐색을 진행해도 회전하는 경우 4가지, 모든 이동 경우를 포함해도 $O(4*M*M*N*N)$이다. 즉, $64\times10^4$ 이므로 넉넉하게 해결할 수 있다.
 
 
 ## 소스코드
