--- a/_posts/2023-11-20-택배 배달과 수거하기.md
+++ b/_posts/2023-11-20-택배 배달과 수거하기.md
@@ -34,8 +34,8 @@ mermaid: true
 **배달 및 수거할 재활용 택배 상자 개수**
 
 
-|    | 집 #1 | 집 #2 | 집 #3 | 집 #4 | 집 #5 |
-| -- | ---- | ---- | ---- | ---- | ---- |
+|      | 집 #1 | 집 #2 | 집 #3 | 집 #4 | 집 #5 |
+| ---- | ----- | ----- | ----- | ----- | ----- |
 | 배달 | 1개   | 0개   | 3개   | 1개   | 2개   |
 | 수거 | 0개   | 3개   | 0개   | 4개   | 0개   |
 
@@ -49,7 +49,7 @@ mermaid: true
 나는 $O(N^2)$으로 해결했다.
 
 
-```c++
+```text
 while(남은 배달 박스 + 남은 수거 박스){
 		1. 수거 박스와 배달 박스 중 더 밖에 있는 것 선택
 		2. 밖부터 안까지 최대한 많은 물건을 배달 및 수거
