--- a/_posts/2023-11-21-양궁대회.md
+++ b/_posts/2023-11-21-양궁대회.md
@@ -51,7 +51,7 @@ mermaid: true
 ## 소스코드
 
 
-처음소스
+**[처음소스]**
 
 
 ```c++
@@ -104,7 +104,7 @@ vector<int> solution(int n, vector<int> info) {
 ```
 
 
-정답 소스
+**[정답 소스]**
 
 
 ```c++
