--- a/_posts/2023-11-26-직무고사 오답노트.md
+++ b/_posts/2023-11-26-직무고사 오답노트.md
@@ -16,7 +16,7 @@ mermaid: true
 ## 총평
 
 
-대부분이 리눅스 혹은 네트워크와 관련된 부분에서 문제가 나왔다. 각 회사마다 특이한? 문제들도 많이 나왔다. 프로그래밍 언어 관련 문제라던가, 윈도우 관련 설정 문제라던가 (윈도우만 쓸 회사는 아니었는데, 리눅스도 아니고, 참 신기했다.) 
+대부분이 리눅스 혹은 네트워크와 관련된 부분에서 문제가 나왔다. 각 회사마다 특이한? 문제들도 많이 나왔다. 프로그래밍 언어 관련 문제라던가, 윈도우 관련 설정 문제라던가 (윈도우만 쓸 회사는 아니었는데, 리눅스도 아니고, 의아했다.) 
 
 
 ## IP 종류
@@ -42,11 +42,10 @@ mermaid: true
 
 
 리눅스 커널 튜닝할 때, 메모리를 많이 사용하면 문제가 되는 튜닝은? 
-
-	- `vm.swappiness` : 가상메모리 공간을 확보
-	- `file.max`: 시스템에서 열 수 있는 파일의 최대 수
-	- `vm.dirty_ratio` : 전체 메모리의 몇 퍼센트를 더티 페이지로 채울지(더티 = 아직 디스크에 기록되지 않은 메모리의 데이터)
-	- `net.ipv4.tcp_max_syn_backlog`: tcp syn 대기열의 크기를 짖어
+- `vm.swappiness` : 가상메모리 공간을 확보
+- `file.max`: 시스템에서 열 수 있는 파일의 최대 수
+- `vm.dirty_ratio` : 전체 메모리의 몇 퍼센트를 더티 페이지로 채울지(더티 = 아직 디스크에 기록되지 않은 메모리의 데이터)
+- `net.ipv4.tcp_max_syn_backlog`: tcp syn 대기열의 크기를 짖어
 
 ## 프로세스 명령어
 
