--- a/_posts/2023-11-25-스케줄링.md
+++ b/_posts/2023-11-25-스케줄링.md
@@ -3,15 +3,14 @@ layout: post
 title: OS 스케줄링
 date: 2023-11-25 22:00 +0900
 description: OS 스케줄링
-category: [CS, OS] 
-tags: [OS, Linux, 스케줄링]
+category: [Linux, 스케줄링] 
+tags: [CS, OS, Linux, 스케줄링]
 pin: false
 math: true
 mermaid: true
 ---
-[CS] OS 스케줄링
+[CS] OS 스케줄링(Linux)
 <!--more-->
-
 
 멀티 쓰레드, 멀티 코어로 발전하면서, 스케줄링이 진화되었다. 기본적인 라운드로빈 스케줄링에서 현재 리눅스에서 사용하고 있는 **CFS**까지 스케줄링의 발전에 대해 살펴본다. 스케줄링에 대한 고려사항은 **cpu의 활용**(utilization), **처리율**(throughput), **교환시간최소화**(turnaround time), **공정성**(fairness)이다. 
 
