Update Post: 2024-02-08-Mac 스페이스 연타시 오류

--- a/_posts/2024-02-08-Mac 스페이스 연타시 오류.md
+++ b/_posts/2024-02-08-Mac 스페이스 연타시 오류.md
@@ -13,10 +13,10 @@ Mac 스페이스 연타시 입력오류
 <!--more-->
 
 
-## Mac 스페이스 두번 누를 경우 오류
+## Mac 스페이스 두 번 누를 경우 오류
 
 
-이번에 14.3으로 업데이트를 하고 나서 노션에 필기할 때 자꾸 입력오류가 발생했다. 처음에는 내가 너무 빨리치나 싶었으나, 반복되는 오류에 뭔가 이상함을 느꼈다. 주로 문제가 되는 것은 “할 수 있다.” 였는데 “할 수 있다”를 입력하면 이게 “할 . 있다.” 이런식으로 입력이 되었다. 노션에 주로 필기를 하면서 공부를 하기에 참.. 답답했다.
+이번에 14.3으로 업데이트를 하고 나서 노션에 필기할 때 자꾸 입력 오류가 발생했다. 처음에는 내가 너무 빨리치나 싶었으나, 반복되는 오류에 뭔가 이상함을 느꼈다. 주로 문제가 되는 것은 “할 수 있다.” 였는데 “할 수 있다”를 입력하면 이게 “할 . 있다.” 로 입력이 되었다. 노션에 주로 필기를 하면서 공부를 하기에 참.. 화가났다.
 
 
 “할 수 있다”를 천천히 입력하면 또 정상적으로 입력되었다. 그래서 이것은 어떤 옵션의 문제라고 생각하여 구글링을 하였으나, 관련 내용이 나타나지 않았다. (제가 검색을 잘못하는 걸 수도 있습니다.)
@@ -28,11 +28,11 @@ Mac 스페이스 연타시 입력오류
 해당 옵션을 활성화하면 Space를 두 번 누르면 자동으로 마침표(".")가 추가되고 그 뒤에 스페이스(공백) 하나가 더 추가된다고 한다
 
 
-이것 때문에 시간낭비를 했다. 그래서 나와 같은 문제를 겪고 있을 사람에게 도움이 되고자, 포스팅을 올린다. 
+이것 때문에 시간 낭비를 했다. 그래서 나와 같은 문제를 겪고 있을 사람에게 도움이 되고자, 포스팅을 올린다. 
 
 
 **Settings > Keyboard > Text Input > Input Sources Edit** 경로로 이동하면 아래와 같은 창이 나온다. 여기서 Add period with double-space 옵션을 비활성화하면 된다.
 
 
-![Untitled.png](/assets/img/post/Mac%20스페이스%20연타시%20오류/1.png)
+![Untitled.png](/assets/img/post/Mac%20스페이스%20연타시%20오류/4.png)
 
