Update Post: 2024-02-24-블로그 100일 후기

--- a/_posts/2024-02-24-블로그 100일 후기.md
+++ b/_posts/2024-02-24-블로그 100일 후기.md
@@ -16,28 +16,28 @@ GitHub 블로그 100일 운영 후기
 ## 블로그 시작 100일 기념 후기
 
 
-블로그를 시작한 지 벌써 100일이 지났다. 원래는 2월 21일 수요일이 100일이지만, 평일동안 합숙교육을 받아 토요일날 작성한다. 
+블로그를 시작한 지 벌써 100일이 지났다. 원래는 2월 21일 수요일이 100일이지만, 평일 동안 합숙 교육을 받아 토요일에 작성한다. 
 
 
 ### 운영
 
 
-블로그를 시작하면서 여러 어려움이 있었다.  디자인 설정, 댓글 기능, 방문자 수 등 GitHub 블로그 환경설정을 하느라 2~3일 걸린 것 같다. 난관에 막힐때마다 ‘티스토리로 시작할까’라는 고민이 정말 많이됐다. 특히 구글 Search Console에 지속적으로 등록되지 않아 문제가 많았다. 어떤 문제 때문에..?! 구글이 자동으로 페이지를 읽지못했다. 결국 수동으로 작업하게 되었고, 나중에는 Google API를 사용하여 자동으로 새로운 페이지를 수동으로 등록하는 프로그램을 제작했다. 관련 포스팅은 [여기](https://www.handongbee.com/posts/Search-Console-%EC%9D%B8%EB%8D%B1%EC%8B%B1%EC%9E%90%EB%8F%99%ED%99%94/)에서 확인할 수 있다. 
+블로그를 시작하면서 여러 어려움이 있었다. 디자인 설정, 댓글 기능, 방문자 수 등 GitHub 블로그 환경설정을 하느라 2~3일 걸린 것 같다. 난관에 막힐 때마다 ‘티스토리로 시작할까’라는 고민이 정말 많이됐다. 특히 구글 Search Console에 등록되지 않아 문제가 많았다. 어떤 문제 때문에..?! 구글이 자동으로 페이지를 처리하지 못했다. 결국 수동으로 작업하게 되었고, 나중에는 Google API를 사용하여 자동으로 새로운 페이지를 수동으로 등록하는 프로그램을 제작했다. 관련 포스팅은 [여기](https://www.handongbee.com/posts/Search-Console-%EC%9D%B8%EB%8D%B1%EC%8B%B1%EC%9E%90%EB%8F%99%ED%99%94/)에서 확인할 수 있다. 
 
 
-아래는 구글 Search Console 실적페이지이다. 인덱싱 문제때문에 1.14일부터 검색에 노출되어 생각보다 클릭수가 적다 😟
+아래는 구글 Search Console 실적페이지이다. 인덱싱 문제 때문에 1.14일부터 검색에 노출되어 생각보다 클릭 수가 적다 😟
 
 
-![Untitled.png](/assets/img/post/블로그%20100일%20후기/1.png)
+![Untitled.png](/assets/img/post/블로그%20100일%20후기/16.png)
 
 
 ### 포스팅
 
 
-100일동안 51개의 포스팅을 진행했다. 10개정도는 포스팅을 단순히 옮긴 것이니 약 40개정도의 글을 작성했다. 처음에는 7일에 1개정도의 포스팅을 예상했으나, 생각보다 더 많은 포스팅을 했다. 노션과 연동을 해둔 덕분인 것 같다. 노션에서 작성한 글을 바로 포스팅할 수 있는 것은 정말 편한 것 같다. 관련 내용으로 아직 포스팅을 하지 않았지만, 작성하면 업데이트하겠다. 
+100일 동안 51개의 포스팅을 진행했다. 10개는 포스팅을 단순히 옮긴 것이니 약 40개 정도의 글을 작성했다. 처음에는 7일에 하나의 포스팅을 예상했으나, 생각보다 더 많은 포스팅을 했다. 노션과 연동을 해둔 덕분인 것 같다. 노션에서 작성한 글을 바로 포스팅할 수 있는 것은 정말 편한 것 같다. 관련 내용으로 아직 포스팅을 하지 않았지만, 작성하면 업데이트하겠다. 
 
 
-가장 있기가 많았던 포스팅은 자격증관련 후기이다. Terraform Associate 003, CKA 후기가 가장 많았다!앞으로도 꾸준히 자격증을 취득할 예정이라 아마 조회수의 대부분을 담당하지 않을까 생각한다.
+가장 있기가 많았던 포스팅은 자격증 관련 후기이다. Terraform Associate 003, CKA 후기가 가장 많았다! 앞으로도 꾸준히 자격증을 취득할 예정이라 아마 조회수의 대부분을 담당하지 않을까 생각한다.
 
 
 포스팅의 주제는 CS, Cloud, IaC, Kubernetes, Docker 등 엔지니어링과 관련된 내용이 대부분이다. 기술 내용을 제외하고는 블로그와 관련한 내용이 대부분이었다. 
@@ -46,11 +46,11 @@ GitHub 블로그 100일 운영 후기
 ### 앞으로 목표
 
 
-기술적인 내용으로 포스팅을 진행했는데, 일상내용도 작성해보려고 한다. 또한, 작성했던 포스팅을 검토하며 품질을 높여보려한다. 여태까지는 주로 클라우드 관련되어서 문서를 작성했는데, 이제는 개발과 관련된 내용도 작성해보려고 한다.
+기술적인 내용으로 포스팅을 진행했는데, 일상 내용도 작성할까싶다. 또한, 작성했던 포스팅을 검토하며 품질을 높여보려한다. 여태까지는 주로 클라우드 관련되어서 문서를 작성했는데, 이제는 개발과 관련된 내용도 자세히 다루고 싶다. (하고 싶은 프로젝트가 생기면 ㅎ)
 
 
 ### 결론
 
 
-이것저것 문제가 많았지만, 지금은 모두 해결되어 편리하게 잘 사용하고 있다. 다만, 댓글기능이나 포스팅기능이 생각보다 부족해서 티스토리나 다른 완성형 플랫폼에 대한 고민이 커진다. ㅠㅠ 노션 연동이나 커스터마이징때문에 한동안은 깃허브 블로그를 쓰겠지만 언젠가는 옮길 것 같다는 생각이 든다.
+이것저것 문제가 많았지만, 지금은 모두 해결되어 편리하게 잘 사용하고 있다. 다만, 댓글 기능이나 기타 기능이 생각보다 부족해서 티스토리나 다른 완성형 플랫폼에 대한 고민이 커진다. 노션 연동이나 커스터마이징 때문에 한동안은 깃허브 블로그를 쓰겠지만 언젠가는 옮길 것 같다는 생각이 든다.
 
