Update Post: 2024-03-08-뽀모도로 1달 후기

--- a/_posts/2024-03-08-뽀모도로 1달 후기.md
+++ b/_posts/2024-03-08-뽀모도로 1달 후기.md
@@ -16,55 +16,55 @@ mermaid: true
 ## 뽀모도로 1달 후기
 
 
-2월 한달간 뽀모도로 타이머를 사용한 후기를 작성한다.
+2월 한 달간 뽀모도로 타이머를 사용한 후기를 작성한다.
 
 
 ### 배경
 
 
-프로젝트나 업무를 하다보면 생산성에 대한 고민이 자주 든다. 나의 생산성을 높이기 위해서는 어떤 것이 필요한지 연구가 필요하다고 느꼈고, 집중하는 시간을 추적하고 관리하기 위해 업무시간 관리 도구를 도입하고자 했다.
+프로젝트나 업무를 하다 보면 생산성에 대한 고민이 자주 든다. 나의 생산성을 높이기 위해서는 어떤 것이 필요한지 연구가 필요하다고 느꼈고, 집중하는 시간을 추적하고 관리하기 위해 업무시간 관리 도구를 도입하고자 했다.
 
 
-시간관리 방법으로는 뽀모도로를 선택했다. 이유는 요즘들어 “쉴때 쉬고, 할때 하자”의 중요성을 느꼈다. 애매하게 하는 것도 아닌 안하는 것도 아닌 시간은 버려지는 것 같다고 많이 느꼈다. 그래서 뽀모도로를 통해 집중하는 시간엔 몰입도를 높여보려고 한다.
+시간 관리 방법으로는 뽀모도로를 선택했다. 이유는 요즘 들어 “쉴 때 쉬고, 할 때 하자”의 중요성을 느꼈다. 하는 것도 아닌 쉬는 것도 아닌 시간은 버려지는 것 같다고 많이 느꼈다. 그래서 뽀모도로를 통해 집중하는 시간엔 몰입도를 높여보려고 한다.
 
 
-애플리케이션은 [Focus To-Do](https://www.focustodo.cn/)를 사용했다. 뽀모도로, To-Do 리스트를 제공한다. 또, 여러 통계치를 볼 수 있어 회고할 때 편해보여 선택했다.
+애플리케이션은 [Focus To-Do](https://www.focustodo.cn/)를 사용했다. 뽀모도로, To-Do 리스트를 제공한다. 또, 여러 통계치를 볼 수 있어 회고할 때 숫자를 기반으로 분석할 수 있어 선택했다.
 
 
 ### 설정
 
 
-하루에 목표 집중 시간은 5시간으로 잡았다. 하루에 가용할 수 있는 시간이 계산해보니 약 10시간 정도였다. 가용 시간 중에 절반으로 하면 목표치가 낮아보일 수 있다. 하지만, 지난 일년 동안 인턴 생활을 하면서 내가 온전히 집중할 수 있는 시간은 적다는 것을 많이 느꼈다. 주변 동료의 요청으로 다른 작업을 해야하거나, 회의가 있다던가, 티타임 등 생각보다 변수가 많았고 다른 작업을 하다 돌아오면 집중력이 깨져있는 경우가 많았다.
+하루에 목표 집중 시간은 5시간으로 잡았다. 하루에 가용할 수 있는 시간이 계산하니 약 10시간이었다. 가용 시간 중에 절반으로 하면 목표치가 낮아 보일 수 있다. 하지만, 지난 일 년 동안 인턴 생활을 하면서 내가 온전히 집중할 수 있는 시간은 적다는 것을 많이 느꼈다. 주변 동료의 요청으로 다른 작업을 해야 하거나, 회의가 있다던가, 티타임 등 생각보다 변수가 많았고 다른 작업을 하다 돌아오면 집중력이 깨져있는 경우가 많았다.
 
 
 우선 목표 시간으로 5시간을 잡고, 나의 집중력이 많이 올라왔다고 생각하면 차후 조정할 생각이다.
 
 
-1뽀모도로는 40분으로 잡았다. 기본값은 25분으로 되어있었는데, 25분으로 일주일정도 해본 결과 너무 짧다는 느낌이 컸다. 아무래도 한번 집중하면 40~50분정도 몰입하다보니 중간에 깨지는 느낌이 싫었다. 40분정도로 상향하고 일주간 사용해보니 딱 적당한 것 같다.
+1뽀모도로는 40분으로 잡았다. 기본값은 25분으로 되어있었는데, 25분으로 일주일 정도 해본 결과 너무 짧다는 느낌이 컸다. 아무래도 한번 집중하면 40~50분 정도 몰입하다보니 중간에 깨지는 느낌이 싫었다. 40분으로 상향하고 일 주간 사용 해보니 딱 적당한 것 같다.
 
 
 ### 1달 후기
 
 
-처음에는 뽀모도로에 적응하는 것이 힘들었다. 첫 날의 경우 작업을 시작했지만, 시작버튼을 누르는 것을 까먹어 기록하지 못했다. 점차 익숙해지더니 3주차에는 조금이나마 적응되어 목표 달성시간이 늘었다. 하지만, 현재 포스팅을 하고 있는 지금도 까먹을 때가 종종 있다.
+처음에는 뽀모도로에 적응하는 것이 힘들었다. 첫날의 경우 작업을 시작했지만, 시작버튼을 누르는 것을 까먹어 기록하지 못했다. 점차 익숙해지더니 3주 차에는 조금이나마 적응되어 목표 달성 시간이 늘었다. 하지만, 현재 포스팅을 하고 있는 지금도 까먹을 때가 종종 있다.
 
 
 ### 결과 분석
 
 
-아래의 사진은 2월 한달간의 뽀모도로 사용시간이다. 하루에 목표시간을 5시간으로 잡았다. 2월에는 17일정도 타이머를 사용했다. 19일부터 한주간 합숙교육을 다녀와서 비어있다. 
+아래의 사진은 2월 한 달간의 뽀모도로 사용 시간이다. 하루에 목표시간을 5시간으로 잡았다. 2월에는 17일정도 타이머를 사용했다. 19일부터 한 주간 합숙교육을 다녀와서 비어있다. 
 
 
-![Untitled.png](/assets/img/post/뽀모도로%201달%20후기/1.png)
+![Untitled.png](/assets/img/post/뽀모도로%201달%20후기/17.png)
 
 
-세부사항을 살펴보면, 주로 아침에 집중하지 못한 모습이 보인다! 아침에는 주로 다른 기술블로그나 어제 있었던 사건들을 스크랩하기도 하는데, 그렇다고 해도 너무 없는 모습이다. 아침에 1시간정도는 진행하도록 노력해야겠다.
+세부사항을 살펴보면, 주로 아침에 집중하지 못한 모습이 보인다! 아침에는 주로 다른 기술블로그나 어제 있었던 사건들을 스크랩하기도 하는데, 그렇다고 해도 너무 없는 모습이다. 아침에 1시간 정도는 진행하도록 노력해야겠다.
 
 
-그리고, 한번 흐름이 끊기면 너무 많은 시간(약 1~2시간)동안 쉬는 모습을 볼 수 있다. ㅎㅎ 이 부분도 앞으로 주의해야겠다.
+그리고, 한번 흐름이 끊기면 너무 많은 시간(약 1~2시간) 동안 쉬는 모습을 볼 수 있다. ㅎㅎ 이 부분도 앞으로 주의해야겠다.
 
 
-![Untitled.png](/assets/img/post/뽀모도로%201달%20후기/2.png)
+![Untitled.png](/assets/img/post/뽀모도로%201달%20후기/18.png)
 
 
 타이머를 사용했던 날에도 목표치를 채우지 못한 날이 더 많다. 아직 적응 중이어서 까먹고 타이머를 누르지 않았던 날도 있었겠지만, 아쉽다. 😟
