--- a/_posts/2023-11-26-직무고사 오답노트.md
+++ b/_posts/2023-11-26-직무고사 오답노트.md
@@ -6,7 +6,7 @@ layout: post
 title: 직무고사 오답노트
 date: 2023-11-26 20:30 +0900 # 날짜 꼭 기입
 description: 직무고사 오답노트
-category: [CS, 직무고사] 
+category: [취준, 직무고사] 
 tags: [System, SE, Linux, Network] # 문제유형
 pin: false
 math: true
