Update Post: 2024-04-07-따끈따근한 CKAD 취득 후기

--- a/_posts/2024-04-07-따끈따근한 CKAD 취득 후기.md
+++ b/_posts/2024-04-07-따끈따근한 CKAD 취득 후기.md
@@ -19,7 +19,7 @@ mermaid: true
 CKAD란 **Certified Kubernetes Application Developer**의 약자로 쿠버네티스를 사용하는 개발자를 대상으로 한 시험이다. 리눅스 재단에서 운영하며, 다른 시험과는 다르게 실습으로 구성된 시험이다. 객관식, 주관식 같은 시험 문제 스타일이 아닌 직접 터미널을 통해 주어진 작업을 수행하며 점수를 얻는다.
 
 
-쿠버네티스 관련 자격증으로는 CKA(admin) / CKAD (developer)/ CKS(security)가 있다. 입문이라면 CKA를 먼저 취득하는 것을 권장한다. 필자도 CKA를 작년에 취득했다. ([CKA 포스팅](https://www.handongbee.com/posts/CKA-%EC%B7%A8%EB%93%9D-%ED%9B%84%EA%B8%B0/)) CKA를 취득한 분들이라면, CKAD도 쉽게 취득할 것이라고 생각한다. CKAD는 CKA에서 공부한 내용 중 Application과 관련된 부분만 나온다. 범위가 줄었으니, 더 쉬울 수도 있다. Application만 별도로 정리한 포스팅은 [여기](https://www.handongbee.com/posts/Kubernetes-Application-%EA%B4%80%EB%A0%A8-%EC%A0%95%EB%A6%AC/)에서 확인할 수 있다.
+쿠버네티스 관련 자격증으로는 CKA(admin) / CKAD (developer)/ CKS(security)가 있다. 입문이라면 CKA를 먼저 취득하는 것을 권장한다. 필자도 CKA를 작년에 취득했다. ([CKA 포스팅](https://www.handongbee.com/posts/CKA-%EC%B7%A8%EB%93%9D-%ED%9B%84%EA%B8%B0/)) CKA를 취득한 분들이라면, CKAD도 쉽게 취득할 것으로 생각한다. CKAD는 CKA에서 공부한 내용 중 Application과 관련된 부분만 나온다. 범위가 줄었으니, 더 쉬울 수도 있다. Application만 별도로 정리한 포스팅은 [여기](https://www.handongbee.com/posts/Kubernetes-Application-%EA%B4%80%EB%A0%A8-%EC%A0%95%EB%A6%AC/)에서 확인할 수 있다.
 
 
 ### 시험 문제
@@ -28,10 +28,10 @@ CKAD란 **Certified Kubernetes Application Developer**의 약자로 쿠버네티
 CKA때와는 다르게 이번엔 여권을 가져와서 무난하게 시험을 볼 수 있었다. 생각나는 문제를 아래에 적어봤다.
 
 - Deployment rollback, rollout(edit): 현재 디플로이먼트를 수정한 뒤, 다시 롤백하는 문제
-- Network Policy으로 특정 파드로만 Ingress, Egress 허용하는 문제
+- Network Policy로 특정 파드로만 Ingress, Egress 허용하는 문제
 - Service Account, Role, Role Binding: 파드와 연결된 서비스 어카운트의 오류를 해결하는 문제, 간단하게 Role만 적절히 바인딩하면 해결됐다.
 - Pod Security: Container 수준으로 보안 관련 문제가 2문제 나왔다.
-- Service: 네트워크 오류를 수정하는 문제, Selector를 적절한 레이블로 수정해주면 해결됐다.
+- Service: 네트워크 오류를 수정하는 문제, Selector를 적절한 레이블로 수정하면 해결됐다.
 - Ingress: nginx Ingress Controller를 사용하여, 외부에서 접근할 때 적절한 백엔드(서비스)로 설정하는 문제
 - Env: 파드의 환경변수를 설정하는 문제, Secret과 연관되어 나왔다.
 
