Update Post: 2024-01-12-서비스 네트워크 모델 이해하기

--- a/_posts/2024-01-12-서비스 네트워크 모델 이해하기.md
+++ b/_posts/2024-01-12-서비스 네트워크 모델 이해하기.md
@@ -172,7 +172,10 @@ iptables -S -t nat | grep KUBE-SEP-KYPXHCLNNXAPFHUW
 ### NodePort
 
 
-NodePort는 해당 노드에 접근한 트래픽 중, 설정한 “포트”에 맞는 트래픽을 **모두 서비스의 ClusterIP**로 넘기는 방식이다. NodePort 방식 또한 똑같이 `Netfilter`를 이용하며, 위의 ClusterIP를 이용한다. 노드 단위에서 특정 포트로 들어오는 트래픽을 받아 ClusterIP로 넘겨준다. ClusterIP로 넘겨지면 알맞은 파드로 전달된다.
+NodePort는 클러스터에 접근한 트래픽 중, 설정한 “포트”에 맞는 트래픽을 **모두 서비스의 ClusterIP**로 넘기는 방식이다. NodePort 방식 또한 똑같이 `Netfilter`를 이용하며, 위의 ClusterIP를 이용한다. 노드 단위에서 특정 포트로 들어오는 트래픽을 받아 ClusterIP로 넘겨준다. ClusterIP로 넘겨지면 알맞은 파드로 전달된다.
+
+
+포트의 범위는 기본적으로 `30000-32767` 사이로 할당할 수 있다.
 
 
 > **“externalTrafficPolicy” 옵션을 Local로 설정하면 해당 노드에 배치된 파드로만 접속된다고 한다.   
@@ -307,20 +310,19 @@ $ iptables -S -t nat | grep KUBE-SVC-5N7WIXIG6FFV5MSL
 ### Load Balancer
 
 
-로드밸런서 타입은 쿠버네티스 자체로 구현할 수 없고, **외부 로드밸런서와 연동되어 작동한다.** NodePort 타입으로 서비스를 작동하면, 사용자는 주로 하나의 노드에 대해서 접근한다. 
+NodePort로 서비스를 외부로 노출하면 클러스터에 존재하는 모든 노드에서 특정 포트(NodePort)를 열어둔다. 하나의 노드의 주소만 노출하면, 노드에 장애가 생겼을 때 문제가 발생한다. 그렇기에 노드 앞단에 로드밸런서를 두어 Health 상태인 노드로만 트래픽을 전달해야 한다. 이를 위해서 쿠버네티스에서는 LoadBalancer Type을 지원한다. (NodePort 타입은 Load Balancer 타입을 위한 요소같다는 생각이 든다.)
 
 
-로드밸런스 타입은 별도의 외부 IP가 존재한다. 클라이언트가 외부 IP를 통해 접근하면, 적절한 규칙으로 노드를 배정해준다. (로드밸런서이니, 노드는 모두 공평한 부하를 받는다.) 그러면 NodePort에서 진행했던 과정이 일어난다.(로드밸런서 타입은 자동으로 노드 포트를 하나 점유한다.)
+로드밸런서 타입은 쿠버네티스 자체로 구현할 수 없고, **외부 로드밸런서와 연동되어 작동한다.** 로드밸런스 타입은 별도의 **외부 IP가 존재한다.** 클라이언트가 외부 IP를 통해 접근하면, 적절한 규칙으로 노드를 배정해준다. (로드밸런서이니, 노드는 모두 공평한 부하를 받는다.) 그러면 NodePort에서 진행했던 과정이 일어난다.(로드밸런서 타입은 자동으로 노드 포트를 하나 점유한다.)
 
 
 **[vs NodePort]**
 
 
-NodePort를 이용하면, 하나의 노드로 들어와 알맞은 파드로 다시 라우팅된다. 만약, 파드가 각기 다른 노드에 존재한다고하면, 1번 노드로 들어와 2번 노드의 파드로 이동할 수 있다. Client → Node1 → Node2 → Pod 이런 식으로 중간에 불필요한 단계를 거쳐 밸런싱된다. (서비스 자체가 밸런싱되므로) 
-또한, 들어오는 트래픽은 하나의 노드로 고정되므로 트래픽이 몰린다. 이를 해결하고자 로드밸런싱 타입이 존재한다. 로드밸런싱 타입은 노드 앞단에 위치하여, 들어가는 노드 자체를 분산한다.
+NodePort와는 다르게 Load Balancer 타입은 Port 할당을 비활성화 할 수 있다. 노드 포트가 아닌 트래픽을 파드로 직접 라우팅하는(ex. AWS EKS) 로드밸런서의 경우에만 가능하다.이때는 `spec.allocateLoadBalancerNodePorts = false`로 설정하면 된다. 
 
 
-실제 로드밸런서에서 엔드포인트(여기서는 파드를 의미함)로 직접 트래픽을 전달하기도 한다. **외부의 로드밸런서 IP로 클라이언트가 접속을 하면, 규칙에 의해 쿠버네티스 클러스터 노드로 접근을 한다.** 로드밸런서이니, 노드는 모두 공평한 부하를 받는다. 그러면 NodePort에서 진행했던 과정이 일어난다. 
+또한, 외부 로드밸런서를 통해 TLS, Draining 등이 가능하다.
 
 
 ## 요약
