--- a/_posts/2023-11-11-eks-스터디-6주차.md
+++ b/_posts/2023-11-11-eks-스터디-6주차.md
@@ -1151,7 +1151,7 @@ $kubectl rbac-tool whoami
 -  [myeks-bastion] testuser 의 Group 변경(system:masters → system:authenticated)으로 RBAC 동작 확인
 
 
-
+**ConfigMap 수정**
 ```bash
 # Please edit the object below. Lines beginning with a '#' will be ignored,
 # and an empty file will abort the edit. If an error occurs while saving this file will be
