--- a/_posts/2023-11-11-eks-스터디-1주차.md
+++ b/_posts/2023-11-11-eks-스터디-1주차.md
@@ -8,7 +8,7 @@ image:
   alt: EKS 스터디 1주차
 category: [Study, EKS]
 tags: [EKS, CloudNet, VPC]
-pin: true
+pin: false
 math: true
 mermaid: true
 ---
