--- a/_posts/2024-01-12-서비스 네트워크 모델 이해하기.md
+++ b/_posts/2024-01-12-서비스 네트워크 모델 이해하기.md
@@ -5,7 +5,7 @@ date: 2024-01-12 15:00 +0900
 description: 쿠버네티스 서비스 네트워크 이해하기
 category: [Kubernetes, Network] 
 tags: [Kubernetes, Services, Network, CNI, Flannel] 
-pin: true
+pin: false
 math: true
 mermaid: true
 ---
